/* Translations */ <wild boar#3602053>

--- a/en/w/wild boar.8245.wikitext
+++ b/en/w/wild boar.8245.wikitext
@@ -29,7 +29,7 @@
 *French: [[sanglier]] {{m}}
 *[[Frisian]]: [[wylde baarch]]
 *[[Friulian]]: [[cenglâr]]
-*[[Gallegan]]: [[xabaril]], [[porco bravo]]
+*[[Galician]]: [[xabaril]], [[porco bravo]] {{m}}
 *German: [[Wildschwein]] {{n}}
 *Greek: [[αγριόχοιρος]], [[αγριογούρουνο]] '' ''
 *Hungarian: [[vaddisznó]]
