/* Noun */ linebreak. <ulterior motive#3603075>

--- a/en/u/ulterior motive.802595.wikitext
+++ b/en/u/ulterior motive.802595.wikitext
@@ -16,6 +16,5 @@
 |url=http://books.google.com/books?id=wi8FI47X3DgC
 |isbn=0743291107
 |page=197
-|passage="I have an '''ulterior motive''', of course. I want a progress report
-on the catalog. You've been so mysterious about the whole thing, people are starting to talk."}}
+|passage="I have an '''ulterior motive''', of course. I want a progress report on the catalog. You've been so mysterious about the whole thing, people are starting to talk."}}
 {{rfd|What's next, [[red hen]]?}}
