--- a/en/u/ulterior motive.802595.wikitext
+++ b/en/u/ulterior motive.802595.wikitext
@@ -17,4 +17,11 @@
 |isbn=0743291107
 |page=197
 |passage="I have an '''ulterior motive''', of course. I want a progress report on the catalog. You've been so mysterious about the whole thing, people are starting to talk."}}
+
+====Translations====
+{{trans-top|hidden cause}}
+*French: [[motif]] [[secret]] {{m}}, [[arrière-pensée]] {{f}}
+{{trans-mid}}
+{{trans-bottom}}
+
 {{rfd|What's next, [[red hen]]?}}
