iwiki +li <though#3606626>

--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -88,6 +88,7 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 [[io:though]]
 [[it:though]]
 [[ku:though]]
+[[li:though]]
 [[hu:though]]
 [[ja:though]]
 [[pl:though]]
