--- a/en/u/ulterior motive.802595.wikitext
+++ b/en/u/ulterior motive.802595.wikitext
@@ -3,12 +3,11 @@
 ===Noun===
 {{en-noun|sg=[[ulterior]] [[motive]]}}
 
-# A [[secret]] [[alternative]] [[reason]] for doing something that differs from the stated reason.
+# An [[alternative]] or [[extrinsic]] [[reason]] for doing something, especially one that differs from the [[stated]] or [[apparent]] reason.
 #*'''1895''', [[w:Arthur_Conan_Doyle|Arthur Conan Doyle]], ''The Stark Munro Letters'', ch. 9,
 #*:There lurks no bribe in the smell and beauty of the flower. Its charm has no '''ulterior motive'''.
 #*'''1941''', "[http://www.time.com/time/magazine/article/0,9171,849702,00.html Poetry]," ''Time'', 8 Dec.,
 #*:The poet is a man without a profit or any other kind of '''ulterior motive'''.
-# An [[extrinsic]] motive, not directly related to the act in question.
 #*{{quote-book
 |year=2006
 |author=Philip Sington
