--- a/en/u/ulterior motive.802595.wikitext
+++ b/en/u/ulterior motive.802595.wikitext
@@ -15,7 +15,8 @@
 |url=http://books.google.ca/books?id=CtaFbUVPFikC&dq=Zoia%27s+Gold
 |isbn=0743291107
 |page=197
-|passage="I have an '''ulterior motive''', of course. I want a progress report on the catalog. You've been so mysterious about the whole thing, people are starting to talk."}}
+|publisher=Scribner
+|passage=I have an '''ulterior motive''', of course. I want a progress report on the catalog. You've been so mysterious about the whole thing, people are starting to talk.}}
 
 ====Translations====
 {{trans-top|alternative or hidden reason}}
