dictionary notes. encarta covers it <ulterior motive#3610488>

--- a/en/u/ulterior motive.802595.wikitext
+++ b/en/u/ulterior motive.802595.wikitext
@@ -25,4 +25,8 @@
 *Spanish: [[segunda intención]] {{f}}
 {{trans-bottom}}
 
+===Dictionary notes===
+[[Category:Dictionary notes]]
+*'''MSN Encarta Dictionary''' has an entry. '''Merriam-Webster online''' has no entry.
+
 {{rfd|What's next, [[red hen]]?}}
