--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -15,6 +15,9 @@ From French ''simple'', from Latin ''[[simplex]]''
 {{en-adj|simpler|simplest}}
 
 # having few parts or features; having no special features
+#*'''2001''', Sydney I. Landau, ''Dictionaries: The Art and Craft of Lexicography'', Cambridge University Press (ISBN 0-521-78512-X), page 167,
+#*:There is no '''simple''' way to define precisely a complex arrangement  of parts, however homely the object may appear to be.
+
 # {{colloquial}} feeble-minded.
 
 ====Synonyms====
