--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -15,19 +15,15 @@ Ultimately from ''[[dudde]]'' (ragged clothing''), of uncertain origin beyond th
 
 ====Translations====
 {{trans-top|a broken or nonfunctional device that does not perform its intended function}}
-*Russian: [[неисправный]]
+*Finnish: [[susi]], [[suutari]]
+*German: [[Blindgänger]] {{m}}
 {{trans-mid}}
+*Russian: [[невзрывающийся]] (nevzryvájuščijsja), [[неисправный]] (neisprávnyj)
 {{trans-bottom}}
 
 {{trans-top|''(obsolete)'' clothes, now always used in plural form (duds)}}
 {{trans-mid}}
 {{trans-bottom}}
-
-{{checktrans-top}}
-*{{ttbc|Finnish}}: [[susi]], [[suutari]]
-*{{ttbc|German}}: [[Blindgänger]] {{m}}
-{{checktrans-mid}}
-{{checktrans-bottom}}
 
 ----
 
