--- a/en/p/palet.803129.wikitext
+++ b/en/p/palet.803129.wikitext
@@ -10,6 +10,9 @@ From {{E.|hif}} {{term|plate}}
 
 # [[plate]]
 
+=== References ===
+* [http://www.geocities.com/fijihindi/FijiHindiEnglishDict.htm#p Fiji Hindi Dictionary]
+
 [[Category:Fijian Hindi nouns]]
 [[Category:hif:Objects]]
 
