--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{ME.}} {{term|benden}} < {{OE.}} {{term|bendan}} to bind or bend.
+From {{ME.}} {{term|benden}} < {{OE.}} {{term|bendan}} to bind or bend (a bow).
 
 ===Pronunciation===
 *{{IPA|/bɛnd/}}
