--- a/en/m/Man U.802678.wikitext
+++ b/en/m/Man U.802678.wikitext
@@ -4,4 +4,4 @@
 ===Proper noun===
 {{en-proper noun}}
 
-# [[w:Manchester United F.C.|Manchester United F.C.]]
+# {{abbreviation}} of [[w:Manchester United F.C.|Manchester United Football Club]]
