--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -5,7 +5,7 @@
 Japanese “Luck of Heaven” or "Luck of the Angels"
 
 ===Proper noun===
-{{en-noun|Nintendo|es}} Game System
+{{en-noun|Nintendo|es}}
 
 # A [[Japanese]] [[manufacturer]] known for its [[games console]]s, founded in 1989.
 # {{context|historically}} [[w:Nintendo Entertainment System|Nintendo Entertainment System]].
