--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -50,7 +50,7 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 {{trans-top|Latinate singular grammatical number suffix}}
 *Dutch: {{t-|nl|-um}}
 *French: {{t+|fr|-um}}
-*Greek: {{t|el||tr=-o}}, {{t|el||tr=-on}}
+* {{ttbc|Greek}}: {{t|el||tr=-o}}, {{t|el||tr=-on}} {{rfscript|Greek}}
 *Italian: {{t-|it|-o}}, {{t+|it|-a}}
 {{trans-mid}}
 *Japanese: {{t|ja|ウム|tr=[[-umu]]|sc=Jpan}}
