--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -27,27 +27,27 @@ Partly imitative, also influenced by {{term|burble}}.
 * Kurdish: {{t|ku|بڵق|sc=KUchar}}
 * Latin: {{t-|la|bulla|f}}
 * Spanish: {{t|es|burbuja|f}}, {{t-|es|pompa|f}} (soap bubble)
-* [[Telugu]]: [[బుడగ]] (buDaga)
+* [[Telugu]]: {{t|te|బుడగ|tr=buDaga}}
 {{trans-bottom}}
 
 {{trans-top|small spherical cavity in a solid}}
 * French: {{t+|fr|trou|m}}
 {{trans-mid}}
-* Kurdish: {{KUchar|[[بڵق]]}}
-* [[Telugu]]: [[బుడగ]] (buDaga)
+* Kurdish: {{t|ku|sc=KUchar|بڵق}}
+* [[Telugu]]: {{t|te|బుడగ|tr=buDaga}}
 {{trans-bottom}}
 
 {{trans-top|anything resembling a hollow sphere}}
 {{trans-mid}}
-* Kurdish: {{KUchar|[[بڵق]]}}
-* [[Telugu]]: [[బుడగ]] (buDaga)
+* Kurdish: {{t|ku|sc=KUchar|بڵق}}
+* [[Telugu]]: {{t|te|బుడగ|tr=buDaga}}
 {{trans-bottom}}
 
 {{trans-top|period of intense speculation in a market}}
 * French: {{t+|fr|bulle|f}}
-* Hebrew: [[בועה]] (bu'a) {{f}}
+* Hebrew: {{t|he|בועה|tr=bu'a|f}}
 {{trans-mid}}
-* [[Telugu]]: [[బుడగ]] (buDaga)
+* [[Telugu]]: {{t|te|బుడగ|tr=buDaga}}
 {{trans-bottom}}
 
 {{rfc-trans}}
@@ -97,12 +97,12 @@ Partly imitative, also influenced by {{term|burble}}.
 
 ====Translations====
 {{trans-top|to rise up in bubbles}}
-* Finnish: [[kuplia]], [[poreilla]]
-* Hungarian: [[buborékol]], [[bugyborékol]]
-* Korean: [[부글]]거리다 (bugeul-georida)
+* Finnish: {{t|fi|kuplia}}, {{t|fi|poreilla}}
+* Hungarian: {{t|hu|buborékol}}, {{t|hu|bugyborékol}}
+* Korean: {{t|ko|부글거리다|tr=bugeul-georida}}
 {{trans-mid}}
-* Kurdish: {{KUchar|[[بڵق کردن]]}}, {{KUchar|[[بڵقه‌بڵق کردن]]}}
-* Spanish: [[burbujear]]
+* Kurdish: {{t|ku|sc=KUchar|بڵق کردن}}, {{t|ku|sc=KUchar|بڵقه‌بڵق کردن}}
+* Spanish: {{t|es|burbujear}}
 * Swedish: {{t-|sv|bubbla}}
 {{trans-bottom}}
 
