--- a/en/n/nonane.775490.wikitext
+++ b/en/n/nonane.775490.wikitext
@@ -1,7 +1,15 @@
 ==English==
+
 ===Noun===
 {{en-noun}}
-# An [[alkane]] with 9 [[carbon]] atoms.
+#{{organic compound}} Any of vary many [[isomeric]] [[alkane]]s, of general formula C<sub>9</sub>H<sub>20</sub>, having 9 [[carbon]] atoms.
+
+====Translations====
+{{trans-top|nonane}}
+*Italian: {{t|it|nonano|m}}
+{{trans-mid}}
+
+{{trans-bottom}}
 
 [[fr:nonane]]
 [[zh:nonane]]
