--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -15,7 +15,7 @@
 ===Preposition===
 {{en-prep}}
 
-# [[In]] or very [[near]] a particular [[place]].
+# [[in|In]] or very [[near]] a particular [[place]].
 #: '''''At''' that precise position, '''at''' Jim’s house.''
 # {{italbrac|indicating time}} [[simultaneous|Simultaneous]] .
 #: '''''At''' six o’clock, at closing time.''
