--- a/en/i/I'll be.856487.wikitext
+++ b/en/i/I'll be.856487.wikitext
@@ -22,6 +22,7 @@ Presumably short for {{term|I'll be damned}}.
 *[[goodness me]]!
 *[[holy shit!]]
 *[[Jesus]]!, [[Jesus Christ]]!
+*[[Jesus Titty-fucking Christ]]!
 *[[my God]]!
 *[[my goodness]]!
 *[[no way]]!
