--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -1,40 +1,19 @@
-English
+==English==
 
-[edit] Etymology
-The earliest record of the phrase better late than never comes from around 27 BC in the 4th book[1] of Ab Urbe condita (History of Rome) by Titus Livius.
+===Etymology===
 
+The earliest record of the phrase ''better late than never'' comes from around 27 BC in the 4th book<ref>{{cite web |url=http://mcadams.posc.mu.edu/txt/ah/Livy/Livy04.html |title=Livy's History of Rome |accessdate=May 29, 2007 |author=Butterfield, Bruce J. |date=1996 |format=HTML | publisher=Marquette University ([http://mu.edu mu.edu]) |language=English.}}</ref> of ''[[w:Ab Urbe condita (book)|Ab Urbe condita]]'' (''History of Rome'') by [[w:Livy|Titus Livius]].
 
-[edit] Phrase
-better late than never
+===Phrase===
+'''[[better]] [[late]] than [[never]]'''
 
-It's better do do something late, than to never do it at all. 
-1996. Titus Livius (translation). Livy's History of Rome (in English): 
-Their insolence and recklessness must be opposed, and better late than never. 
+# It's better do do something late, than to never do it at all.
+#*'''1996.''' Titus Livius (translation). ''Livy's History of Rome'' (in English):
+#*:''Their insolence and recklessness must be opposed, and '''better late than never'''.''
+===References===
+<references/>
 
-[edit] References
-↑ Butterfield, Bruce J. (1996). "Livy's History of Rome (in English.)." (HTML) Marquette University (mu.edu). URL accessed on May 29, 2007. 
-Retrieved from "http://en.wiktionary.org/wiki/better_late_than_never"
-Categories: English idioms | English aphorisms
+[[Category:English idioms]]
+[[Category:English aphorisms]]
 
-ViewsEntry Discussion Edit History Personal toolsLog in / create account Navigation
-Main Page 
-Community portal 
-Requested entries 
-Recent changes 
-Random page 
-Discussion rooms 
-Help 
-Donations 
-Contact us 
-Search
-    Toolbox
-What links here 
-Related changes 
-Upload file 
-Special pages 
-Printable version 
-Permanent link 
-In other languages
-Polski 
-
-This page was last modified 02:22, 9 November 2007. Content is available under GNU Free Documentation License. Privacy policy About Wiktionary Disclaimers
+[[pl:better late than never]]
