--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -11,19 +11,19 @@
 
 ====Translations====
 {{trans-top|polygon having four sides}}
-*Czech: [[čtyřúhelník]] {{m}}
-*Dutch: [[vierhoek]]
-*Finnish: [[nelikulmio]]
-*French: [[quadrilatère]]
-*German: [[Viereck]]
-*Hindi: [[चतुर्भुज]]
-*Italian: [[quadrilatero]] {{m}}
+* Czech: [[čtyřúhelník]] {{m}}
+* Dutch: {{t+|nl|vierhoek}}
+* Finnish: {{t+|fi|nelikulmio}}
+* French: {{t+|fr|quadrilatère}}
+* German: {{t+|de|Viereck}}
+* Hindi: [[चतुर्भुज]]
+* Hebrew: {{he-translation|מרובע|merubá}} {{m}}
+* Italian: {{t+|it|quadrilatero|m}}
 {{trans-mid}}
-*Hebrew: {{he-translation|מרובע|merubá}} {{m}}
-*Japanese: [[四辺形]] (shihenkei)
-*Romanian: [[patrulater]], [[cadrilater]]
-*Spanish: [[cuadrilátero]] {{m}}
-*[[Telugu]]: [[చతుర్భుజి]] (chaturbhuji)
+* Japanese: {{t+|ja|四辺形|tr=shihenkei|sc=Jpan}}, (in common, uses {{t+|ja|四角形|tr=shikakukei|sc=Jpan}})
+* Romanian: [[patrulater]], [[cadrilater]]
+* Spanish: {{t+|es|cuadrilátero|m}}
+* [[Telugu]]: [[చతుర్భుజి]] (chaturbhuji)
 {{trans-bottom}}
 
 ===Adjective===
