--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -33,12 +33,13 @@
 
 ====Translations====
 {{trans-top|having four sides}}
-*Dutch: [[vierhoekig]]
-*Hebrew: {{he-translation|מרובע|merubá}} {{m}}
-*Hindi: [[चतुर्भुजीय]]
-*Irish: [[ceathairshleasach]]
-*Italian: [[quadrilatero]]
+* Dutch: [[vierhoekig]]
+* Hebrew: {{he-translation|מרובע|merubá}} {{m}}
+* Hindi: [[चतुर्भुजीय]]
+* Irish: [[ceathairshleasach]]
+* Italian: [[quadrilatero]]
 {{trans-mid}}
+* Japanese: [[四辺形]]の (shihenkei no)
 {{trans-bottom}}
 
 [[zh-min-nan:quadrilateral]]
