/* Translations */ +de <epicist#3649964>

--- a/en/e/epicist.774547.wikitext
+++ b/en/e/epicist.774547.wikitext
@@ -8,6 +8,7 @@
 ====Translations====
 {{trans-top|epics writer}}
 *Croatian: {{t-|hr|epičar|m}}, {{t-|hr|epik|m}}
+*German: [[Epiker]] {{m}}
 {{trans-mid}}
 {{trans-bottom}}
 
