/* Verb */ <make a killing#3651270>

--- a/en/m/make a killing.742288.wikitext
+++ b/en/m/make a killing.742288.wikitext
@@ -3,6 +3,6 @@
 ===Verb===
 '''to [[make]] [[a]] [[killing]]'''
 
-# {{idiom}} To win/earn a vast amount of [[money]].  Term was used by American bison hunters to describe the act of shooting and skinning a large number of buffalo in a short period of time.
+# {{idiom}} To win/earn a vast amount of [[money]].  Term was used by American bison hunters to describe the act of shooting a large number of buffalo in a short period of time.
 
 [[Category:English verbs]]
