--- a/en/u/Ulster Irish.742124.wikitext
+++ b/en/u/Ulster Irish.742124.wikitext
@@ -1,11 +1,9 @@
 ==English==
 
 ===Proper noun===
-{{en-proper noun|sg=[[Ulster]] [[Gaelic]]}}
+{{en-proper noun|sg=[[Ulster]] [[Irish]]}}
 
-# A dialect of the [[Irish]] [[Gaelic]] language indigenous to Ulster.
+# A dialect of the [[Irish]] language indigenous to Ulster.
 
-====Usage notes====
-This is more commonly referred to as {{term|Ulster Irish}} which distinguishes it from {{term|Ulster Scots}} Gaelic.
 
 [[Category:Dialects]]
