--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -107,7 +107,7 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 * {{trreq|Tamil}}
 * Thai: {{Thai|[[สิ่งของ]]}} (sìng kŏng), {{Thai|[[สิ่ง]]}} (sìng)
 * [[Tupinambá]]: [[mba'e]]
-* {{trreq|Turkish}}
+* Turkish: şey
 * Urdu: {{URchar|[[وستو]]}} (vastū) {{m}}, {{URchar|[[چیز]]}} (ćīz) {{f}}
 * {{trreq|Vietnamese}}
 * Welsh: {{t-|cy|peth|m|xs=Welsh}}
