--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -87,7 +87,7 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 * [[Marathi]]: [[वस्तु]] (vastu)
 * {{trreq|Mongolian}}
 * {{trreq|Nepali}}
-* Norwegian: [[ting]] {{m}}, [[dings]] {{m}}, [[greie]] {{f}} a
+* Norwegian: [[ting]] {{m}}, [[dings]] {{m}}, [[greie]] {{f}}
 * {{trreq|Mongolian}}
 * Old English: {{t-|ang|þing|n|xs=Old English}}
 * Persian: {{FAchar|[[چیز]]}} (čiz)
@@ -107,7 +107,7 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 * {{trreq|Tamil}}
 * Thai: {{Thai|[[สิ่งของ]]}} (sìng kŏng), {{Thai|[[สิ่ง]]}} (sìng)
 * [[Tupinambá]]: [[mba'e]]
-* Turkish: şey
+* Turkish: [[şey]]
 * Urdu: {{URchar|[[وستو]]}} (vastū) {{m}}, {{URchar|[[چیز]]}} (ćīz) {{f}}
 * {{trreq|Vietnamese}}
 * Welsh: {{t-|cy|peth|m|xs=Welsh}}
