--- a/en/i/in one's right mind.775705.wikitext
+++ b/en/i/in one's right mind.775705.wikitext
@@ -5,5 +5,8 @@
 #{{idiom}} [[sane|Sane]], [[sensible]], [[reasonable]]; thinking [[clearly]].
 #:''I used to think that nobody '''in his right mind''' would pay that much for such a thing, but people must pay it all the time, or the company wouldn't be in business.''
 
+====Translations====
+*Russian: [[в здравом уму]] /in healthy mind/
+
 ===See also===
 *[[out of one's mind]]
