/* Translations */ +Czech <blow#3655374>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -43,122 +43,123 @@
 
 ====Translations====
 {{trans-top|produce an air current}} <!--1-->
-*Chinese traditional/simplified: [[吹]], [[吹]] (chuī)
-*Dutch: [[blazen]]
-*Português: [[assoprar]]
-*Finnish: [[puhaltaa]]
-*French: [[souffler]]
-*German: [[blasen]], [[pusten]], [[wehen]]
-*Hungarian: [[fúj]]
-*Japanese: [[吹く]] ([[ふく]], fuku)
-*Korean: [[불다]] (bulda)
+* Chinese traditional/simplified: [[吹]], [[吹]] (chuī)
+* Czech: [[vát]], [[vanout]], [[foukat]]
+* Dutch: [[blazen]]
+* Português: [[assoprar]]
+* Finnish: [[puhaltaa]]
+* French: [[souffler]]
+* German: [[blasen]], [[pusten]], [[wehen]]
+* Hungarian: [[fúj]]
 {{trans-mid}}
-*Kurdish: {{KUchar|[[فو]]}}
-*Russian: [[дуть]] (dut') {{impf}}, [[дунуть]] (dúnut') {{pf}}; [[сморкаться]] (smorkát's'a) {{impf}}, [[сморкнуться]] (smorknút's'a) {{pf}} ''blow the nose''
-*Slovene: [[pihati]]
-*Spanish: [[soplar]]
-*Vietnamese: [[thổi]]; [[phù]], [[phù phù]] (to blow on food)
+* Japanese: [[吹く]] ([[ふく]], fuku)
+* Korean: [[불다]] (bulda)
+* Kurdish: {{KUchar|[[فو]]}}
+* Russian: [[дуть]] (dut') {{impf}}, [[дунуть]] (dúnut') {{pf}}; [[сморкаться]] (smorkát's'a) {{impf}}, [[сморкнуться]] (smorknút's'a) {{pf}} ''blow the nose''
+* Slovene: [[pihati]]
+* Spanish: [[soplar]]
+* Vietnamese: [[thổi]]; [[phù]], [[phù phù]] (to blow on food)
 {{trans-bottom}}
 
 {{trans-top|be propelled by an air current}} <!--2-->
-*Chinese traditional/simplified: [[隨風飄動]], [[隨風飄動]] (suí fēng piāo dòng)
-*Finnish: [[puhaltua]]
-*German: [[wehen]]
-*Korean: [[불리다]] (bullida)
+* Chinese traditional/simplified: [[隨風飄動]], [[隨風飄動]] (suí fēng piāo dòng)
+* Finnish: [[puhaltua]]
+* German: [[wehen]]
 {{trans-mid}}
-*Vietnamese: [[bay]]
+* Korean: [[불리다]] (bullida)
+* Vietnamese: [[bay]]
 {{trans-bottom}}
 
 {{trans-top|explode}} <!--3-->
-*Chinese tradtional/simplified: [[爆炸]], [[爆炸]] (bào zhà)
-*Português: [[explodir]]
-*Dutch: [[springen]], [[ontploffen]]
-*Finnish: [[räjähtää]]
-*French: [[exploser]]
-*German: [[hochgehen]], [[in]] [[die]] [[Luft]] [[gehen]], [[explodieren]]
-*Hebrew: [[להתפוצץ]] (le'hitpotzetz)
+* Chinese tradtional/simplified: [[爆炸]], [[爆炸]] (bào zhà)
+* Português: [[explodir]]
+* Dutch: [[springen]], [[ontploffen]]
+* Finnish: [[räjähtää]]
+* French: [[exploser]]
+* German: [[hochgehen]], [[in]] [[die]] [[Luft]] [[gehen]], [[explodieren]]
+* Hebrew: [[להתפוצץ]] (le'hitpotzetz)
 {{trans-mid}}
-*Japanese: [[爆発]]する ([[ばくはつ]]する, bakuhatsu-suru)
-*Korean: [[터지다]] (teojida)
-*Russian: [[взрываться]] ((vzryvát's'a) {{impf}}, [[взорваться]] (vzorvát's'a) {{pf}}, [[взлетать на воздух]] (vzletát' na vózduχ) {{impf}}, [[взлететь на воздух]] (vzlet'ét' na vózduχ) {{pf}}
-*Vietnamese: [[nổ]]
+* Japanese: [[爆発]]する ([[ばくはつ]]する, bakuhatsu-suru)
+* Korean: [[터지다]] (teojida)
+* Russian: [[взрываться]] ((vzryvát's'a) {{impf}}, [[взорваться]] (vzorvát's'a) {{pf}}, [[взлетать на воздух]] (vzletát' na vózduχ) {{impf}}, [[взлететь на воздух]] (vzlet'ét' na vózduχ) {{pf}}
+* Vietnamese: [[nổ]]
 {{trans-bottom}}
 
 {{trans-top|be very undesirable}} <!--4-->
-*Chinese traditional/simplified: [[搞砸]], [[搞砸]] (gǎo zá)
-*Finnish: [[olla]] [[syvä|syvältä]]
-*Korean: [[제기랄]] (jegiral) (''interjection'')
+* Chinese traditional/simplified: [[搞砸]], [[搞砸]] (gǎo zá)
+* Finnish: [[olla]] [[syvä|syvältä]]
 {{trans-mid}}
-*Vietnamese: [[tẽn tò]], [[tẽn]], [[thẹn thò]], [[thẹn]]
+* Korean: [[제기랄]] (jegiral) (''interjection'')
+* Vietnamese: [[tẽn tò]], [[tẽn]], [[thẹn thò]], [[thẹn]]
 {{trans-bottom}}
 
 {{trans-top|(of a cetacean) exhale visibly through the spout the seawater}} <!--5-->
-*Chinese tradtional/simplified: [[喘氣]], [[喘氣]] (chuǎn qì)
-*Dutch: [[spuiten]]
-*Finnish: [[suihkuttaa]]
-*Korean: [[뿜다]] (ppumda)
+* Chinese tradtional/simplified: [[喘氣]], [[喘氣]] (chuǎn qì)
+* Dutch: [[spuiten]]
+* Finnish: [[suihkuttaa]]
 {{trans-mid}}
-*Vietnamese: [[phun]] [[nước]]
+* Korean: [[뿜다]] (ppumda)
+* Vietnamese: [[phun]] [[nước]]
 {{trans-bottom}}
 
 {{trans-top|propel by an air current}} <!--6-->
-*Chinese traditional/simplified: [[刮走]], [[刮走]] (guā zǒu)
-*Dutch: [[blazen]]
-*Finnish: [[puhaltaa]]
-*German: [[blasen]], [[wegblasen]], [[fortblasen]], [[hinfortblasen]], [[pusten]], [[wegpusten]]
-*Korean: [[불다]] (bulda)
+* Chinese traditional/simplified: [[刮走]], [[刮走]] (guā zǒu)
+* Dutch: [[blazen]]
+* Finnish: [[puhaltaa]]
+* German: [[blasen]], [[wegblasen]], [[fortblasen]], [[hinfortblasen]], [[pusten]], [[wegpusten]]
 {{trans-mid}}
-*Russian: [[сдувать]] (sduvát') {{impf}}, [[сдуть]] (sdut') {{pf}}
-*Vietnamese: [[thở]], [[thổi]]
+* Korean: [[불다]] (bulda)
+* Russian: [[сдувать]] (sduvát') {{impf}}, [[сдуть]] (sdut') {{pf}}
+* Vietnamese: [[thở]], [[thổi]]
 {{trans-bottom}}
 
 {{trans-top|squander}} <!--7-->
-*Chinese tradtional/simplified: [[浪費]], [[浪費]] (làng fèi)
-*Finnish: [[tuhlata]], [[törsätä]]
-*Korean: [[날리다]] (nallida)
+* Chinese tradtional/simplified: [[浪費]], [[浪費]] (làng fèi)
+* Finnish: [[tuhlata]], [[törsätä]]
 {{trans-mid}}
-*Russian: [[продувать]] (produvát') {{impf}}, [[продуть]] (prodút') {{pf}}
-*Vietnamese: [[xài phí]], [[phung phí]]
+* Korean: [[날리다]] (nallida)
+* Russian: [[продувать]] (produvát') {{impf}}, [[продуть]] (prodút') {{pf}}
+* Vietnamese: [[xài phí]], [[phung phí]]
 {{trans-bottom}}
 
 {{trans-top|fellate}} <!--8-->
-*[[Catalan]]: [[llepar]]
-*Dutch: [[pijpen]]
-*Finnish: [[ottaa]] [[suu|suihin]]
-*French: [[sucer]], [[tailler]] une [[pipe]]
-*Korean: [[아양떨다]] (ayang-tteolda)
-*Polish: [[robić loda]], [[lizać pałę]], [[obciągać loda]], [[obciągać fiuta]], [[obciągać chuja]]
+* [[Catalan]]: [[llepar]]
+* Dutch: [[pijpen]]
+* Finnish: [[ottaa]] [[suu|suihin]]
+* French: [[sucer]], [[tailler]] une [[pipe]]
 {{trans-mid}}
-*Russian: [[сосать]] (sosát') {{impf}}, [[отсосать]] (otsosát') {{pf}}
-*Serbian:
-*:*Cyrillic: [[пушити]]
-*:*Roman: [[pušiti]]
+* Korean: [[아양떨다]] (ayang-tteolda)
+* Polish: [[robić loda]], [[lizać pałę]], [[obciągać loda]], [[obciągać fiuta]], [[obciągać chuja]]
+* Russian: [[сосать]] (sosát') {{impf}}, [[отсосать]] (otsosát') {{pf}}
+* Serbian:
+*:* Cyrillic: [[пушити]]
+*:* Roman: [[pušiti]]
 {{trans-bottom}}
 
 {{trans-top|create or shape by blowing}} <!--9-->
-*Chinese traditional/simplified: [[吹氣]], [[吹氣]] (chuī qì)
-*Dutch: [[blazen]]
-*Finnish: [[puhaltaa]]
-*Hebrew: [[לנפח]] (le'nape'akh)
+* Chinese traditional/simplified: [[吹氣]], [[吹氣]] (chuī qì)
+* Dutch: [[blazen]]
+* Finnish: [[puhaltaa]]
+* Hebrew: [[לנפח]] (le'nape'akh)
 {{trans-mid}}
-*Korean: [[불다]] (bulda)
-*Russian: [[выдувать]] (vyduvát') {{impf}}, [[выдуть]] (výdut') {{pf}}
-*Vietnamese: [[thổi]]
+* Korean: [[불다]] (bulda)
+* Russian: [[выдувать]] (vyduvát') {{impf}}, [[выдуть]] (výdut') {{pf}}
+* Vietnamese: [[thổi]]
 {{trans-bottom}}
 
 {{trans-top|leave}} <!--10-->
-*Chinese traditional/simplified: [[離開]], [[離開]] (lí kāi)
-*Finnish: [[häipyä]]
-*Korean: [[그만두다]] (geuman-duda)
+* Chinese traditional/simplified: [[離開]], [[離開]] (lí kāi)
+* Finnish: [[häipyä]]
 {{trans-mid}}
-*Vietnamese: [[bỏ đi]], [[chuồn]]
+* Korean: [[그만두다]] (geuman-duda
+* Vietnamese: [[bỏ đi]], [[chuồn]]
 {{trans-bottom}}
 
 {{checktrans-top}}
 ''intransitive meanings''
-*{{ttbc|Esperanto}}: [[blovi]]
-*{{ttbc|Indonesian}}: [[tiup|meniup]], [[ledak|meledakkan]]
-*{{ttbc|Telugu}}: [[ఊదు]] (oodu), [[కొట్టుకొనిపోవు]] (koTTukonipOvu), [[వీచు]] (veecu)
+* {{ttbc|Esperanto}}: [[blovi]]
+* {{ttbc|Indonesian}}: [[tiup|meniup]], [[ledak|meledakkan]]
+* {{ttbc|Telugu}}: [[ఊదు]] (oodu), [[కొట్టుకొనిపోవు]] (koTTukonipOvu), [[వీచు]] (veecu)
 {{trans-bottom}}
 
 ===Noun===
