/* Noun */ [[clean as a whistle‎ ]] <whistle#3656326>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -60,6 +60,9 @@
 # Any high-pitched sound similar to the sound made by whistling.
 # {{CockneyRS}} A [[suit]].
 
+====Derived terms====
+*[[clean as a whistle‎ ]]
+
 ====Translations====
 {{trans-top|device used to make a whistling sound}}
 * [[Breton]]: {{t|br|c'hwitell|f|xs=Breton}}, {{t|br|c'hwitelloù|p|xs=Breton}}
