--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -1,5 +1,6 @@
 {{wikipedia}}
 ==English==
+
 ===Alternative spellings===
 *[[count down]]
 *[[count-down]]
@@ -10,11 +11,6 @@
 # A [[count]] [[backward]] to the [[time]] of some [[event]], especially the [[launch]] of a [[space]] [[vehicle]]
 # The acts of [[preparation]] carried out during this period
 # {{slang}} A radio or television program counting down the top songs of a given week, usually in reverse order and ending with the No. 1 song.
-
-===Proper noun===
-{{en-proper noun}}
-
-# {{rfd-sense}} {{UK}} A long-running [[television]] [[game show]]
 
 ====Translations====
 {{trans-top|A count backward to the time of some event}}
@@ -39,26 +35,16 @@
 {{trans-mid}}
 {{trans-bottom}}
 
-=====Translations to be checked=====
-{{checktrans}}
-{{top}}
-*{{ttbc|Dutch}}: [[aftelling]] ''f''
-*{{ttbc|German}}: [[Zeitkontrolle]] ''f'', Countdown ''m''
-{{mid}}
-{{bottom}}
+{{checktrans-top}}
+*{{ttbc|Dutch}}: [[aftelling]] {{f}}
+*{{ttbc|German}}: [[Zeitkontrolle]] {{f}}, Countdown {{m}}
+{{trans-mid}}
 
-===Verb===
-{{en-verb}}
-
-# {{rfv-sense|doesn't inflect, ought to be [[count down]] or [[count-down]]}} To [[recite]] a countdown
-
-====Translations====
-{{trans-top|to count down}}
+;to count down (nonsense - nonstandard)
 *Chinese:
 *:Mandarin: {{zh-ts|[[倒]][[數]]|[[倒]][[数]]}} ([[dào]][[shǔ]])
 *Dutch: [[aftellen]]
 *German: [[rückwärts]] [[zählen]]
-{{trans-mid}}
 *Portuguese: [[fazer]] a [[contagem regressiva]]
 *Slovene: [[odštevati]]
 {{trans-bottom}}
