--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -1,5 +1,6 @@
 {{wikipedia|dab=weasel (disambiguation)|weasel}}
 ==English==
+[[Image:Mustela frenata.jpg|thumb|A weasel ''Mustela frenata'' (2)]]
 
 ===Etymology===
 
