--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -25,6 +25,7 @@ From {{OE.}} ''[[bindan]]''.
 ====Translations====
 {{top}}
 * [[Crimean Tatar]]: [[bint#Crimean Tatar|bint]]
+* Czech: [[vázat]] (''by a promise'')
 * Dutch: [[binden]], [[verbinden]], [[koppelen]]
 * Finnish: [[sitoa]], [[yhdistää]]
 * French: [[relier]] (livre)
