--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -137,11 +137,18 @@
 ==Latvian==
 
 ===Conjunction===
-'''bet'''
+{{infl|lv|conjunction}}
 
 # [[but]]
 
-[[Category:Latvian conjunctions]]
+----
+
+==Lithuanian==
+
+===Conjunction===
+{{infl|lt|conjunction}}
+
+# [[but]]
 
 ----
 
