/* Translations */ reqs <again#3673538>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -26,18 +26,27 @@
 {{trans-top|having already happened before}}
 *[[Afrikaans]]: [[weer]], [[alweer]]
 *Arabic: {{ARchar|[[مرة اخرى]]}} {{unicode|(mára ’úχra)}}
+*{{trreq|Armenian}}
+*{{trreq|Basque}}
 *[[Breton]]: [[adarre]]
 *Bulgarian: [[отново]] (otnovo), [[пак]] (pak)
+*{{trreq|Burmese}}
+*{{trreq|Catalan}}
 *Chinese: [[再]] (zài)
+*{{trreq|Croatian}}
 *Czech: [[zase]], [[opět]], [[znova]]
 *Danish: [[igen]]
 *Dutch: [[opnieuw]], [[nogmaals]], [[weer]], [[wederom]]
 *Esperanto: [[denove]], [[ree]]
+*{{trreq|Estonian}}
 *Finnish: [[taas]], [[uudelleen]], [[jälleen]], [[toistamiseen]], [[vielä kerran]]
 *French: [[de nouveau]], [[encore]]
+*{{trreq|Georgian}}
 *German: [[erneut]], [[noch einmal]], [[nochmal]], [[wieder]]
 *Greek: [[ξανά]] (ksana), [[πάλι]] (pali)
+*{{trreq|Hawaiian}}
 *Hebrew: [[שוב]] (šuv)
+*{{trreq|Hindi}}
 *Hungarian: [[újra]], [[megint]], [[ismét]]
 *Icelandic: [[aftur]]
 *[[Ido]]: [[ankore un foyo]], [[ankorfoye]]
@@ -45,13 +54,24 @@
 *Italian: [[di nuovo]], [[ancora]]
 {{trans-mid}}
 *Japanese: [[また]] (mata); [[再び]] (ふたたび, futatabi); [[もう一度]] (mō ichido); [[あらためて]] (aratamete)
+*{{trreq|Kannada}}
+*{{trreq|Khmer}}
 *Korean: [[다시]] (dasi)
 *Kurdish: {{KUchar|[[دیسان]]}}, {{KUchar|[[هه‌مدیس]]}}, {{KUchar|[[دوباره‌]]}}
+*{{trreq|Latin}}
+*{{trreq|Latvian}}
 *Lithuanian: [[vėl]]
+*{{trreq|Malayalam}}
+*{{trreq|Maltese}}
+*{{trreq|Maori}}
+*{{trreq|Mongolian}}
+*{{trreq|Norwegian}}
+*{{trreq|Persian}}
 *Polish: [[ponownie]], [[jeszcze raz]], [[znowu]]
 *Portuguese: [[outra vez]], [[novemente]]
 *Romanian: [[iarăşi]],[[din nou]]
 *Russian: [[опять]] (opját’)
+*{{trreq|Sanskrit}}
 *Serbian: [[opet]], [[ponovo]], [[obnova]], [[snova]], [[odnova]]
 *Slovenian: [[spet]], [[ponovno]], [[znova]]
 *Spanish: [[otra vez]], [[de nuevo]]
@@ -59,6 +79,7 @@
 *[[Telugu]]: [[మళ్లీ]] (mallee), [[మరలా]] (maralaa)
 *Turkish: [[yeniden]], [[tekrar]], [[gene]]
 *Vietnamese: [[lại]]
+*{{trreq|Welsh}}
 {{trans-bottom}}
 
 [[Category:200 English basic words]]
