--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -1,5 +1,4 @@
 ==English==
-{{rfd}}
 
 ===Etymology===
 Japanese “Luck of Heaven” or "Luck of the Angels"
@@ -7,8 +6,8 @@ Japanese “Luck of Heaven” or "Luck of the Angels"
 ===Proper noun===
 {{en-noun|Nintendo|es}}
 
-# A [[Japanese]] [[manufacturer]] known for its [[games console]]s, founded in 1989.
-# {{context|historically}} [[w:Nintendo Entertainment System|Nintendo Entertainment System]].
+# {{rfd-sense}} A [[Japanese]] [[manufacturer]] known for its [[games console]]s, founded in 1989.
+# [[w:Nintendo Entertainment System|Nintendo Entertainment System]].
 #* '''1995''', David Gladstone, ed., ''British Social Welfare: Past, Present, and Future'', page 274
 #*: There is nothing wrong with the accoutrements of personal affluence, but if the numbers of personal stereos, '''Nintendos''', mobile phones and cars grow […].
 #* '''2005''', Lila Abu-Lughod, ''Dramas of Nationhood: The Politics of Television in Egypt'', page 280
