/* Derived terms */ <wassen#3674941>

--- a/en/w/wassen.4471.wikitext
+++ b/en/w/wassen.4471.wikitext
@@ -13,8 +13,10 @@
 
 ====Derived terms====
 * [[zich wassen]]
-* [[volwassen]]
 * [[afwassen]]
+* [[volwassen]]
+* [[wasdom]]
+* [[wassenaar]]
 
 ===Adjective===
 '''wassen'''
