--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -26,8 +26,10 @@
 
 ====Translations====
 {{trans-top|sound made by a duck}}
+* Dutch: [[kwak]] 
 * Faroese: [[gvagg]], [[kvagg]]
 * Finnish: {{t-|fi|kvaak}}
+* French: [[coin-coin]] 
 * Greek: {{t|el|πα πα|sc=Grek}} (pa pa)
 {{trans-mid}}
 * Russian: [[кря-кря]] (kr'a-kr'a), [[кряканье]] (kr'ákan'je) {{n}}
@@ -35,7 +37,9 @@
 {{trans-bottom}}
 
 {{trans-top|fraudulent or incompetent doctor of medicine}}
+* Dutch: [[kwakzalver]] {{m}}
 * Finnish: {{t+|fi|puoskari}}
+* French: [[charlatan]] {{m}} 
 * German: {{t+|de|Quacksalber|m}}
 * Greek: {{t|el|κομπογιαννίτης|m|sc=Grek}} (kompoyannítis), {{t|el|αλμπάνης|m|sc=Grek}} (albánis)
 {{trans-mid}}
@@ -44,7 +48,9 @@
 {{trans-bottom}}
 
 {{trans-top|charlatan}}
+* Dutch: [[kwakzalver]] {{m}}
 * Finnish: {{t+|fi|huijari}}
+* French: [[charlatan]] {{m}} 
 * German: {{t+|de|Quacksalber|m}}
 {{trans-mid}}
 * Russian: [[шарлатан]] (šarlatán) {{m}}
@@ -58,8 +64,7 @@
 =====Translations to be checked=====
 {{checktrans}}
 {{trans-top|Translations to be categorised}}
-*{{ttbc|Dutch}}: [[kwak]] (1), [[kwakzalver]] (2, 3)
-*{{ttbc|French}}: [[coin-coin]] (1) ''m''; [[charlatan]] ''m'' (2, 3); [[toubib]] ''m'' (4)
+* French: [[toubib]] ''m'' (4)
 *{{ttbc|Indonesian}}: [[kwek-kwek]] (1), [[gadungan]] (2, 3)
 *{{ttbc|Interlingua}}: [[quac]] (1)
 *{{ttbc|Italian}}: [[qua qua]] (1) ''m''; [[ciarlatano]] (2, 3); [[dottore]] (4)
