--- a/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
+++ b/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Proper noun===
-'''Russian Soviet Federative Socialist Republic'''
+{{en-proper noun}}
 
 # The official name for modern day [[Russia]] before the collapse of the [[Soviet Union]] (1917-1991).
 
@@ -13,3 +13,5 @@
 {{top}}
 *Finnish: [[Venäjän Sosialistinen Federatiivinen Neuvostotasavalta]].
 {{bottom}}
+
+[[Category:Countries]]
