Isn't refering to subtraction in the definition subtraction wrong? <subtraction#3681595>

--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -8,7 +8,7 @@
 {{en-noun|s|-}}
 
 # {{arithmetic}} (''uncountable'') The process of [[subtract]]ing a [[number]] from another.
-# {{arithmetic}} (''countable'') A calculation involving subtraction.
+# {{arithmetic}} (''countable'') A calculation involving the finding of differences between two numbers or quantities.
 #:''The teacher has set us ten subtractions to do by tomorrow.''
 
 ====Translations====
