--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -69,7 +69,7 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 *Finnish: [[vaikka]], (''if there's negation after though'') [[vaikkakaan]]
 *French: [[malgré]], [[bien que]], [[cependant]]
 *German: [[obwohl]]
-*Greek: [[έστω και αν]] (ésto ké án), [[αν και]] (án ké), [[μολονότι]] (molonóti), [[καίτοι]] (kéti)
+*Greek: [[έστω και αν]] (ésto ké án), [[αν και]] (án ké), [[μολονότι]] (mólonóti), [[καίτοι]] (kéti)
 *Icelandic: [[þó]], [[þótt]]
 *Indonesian: [[walau]], [[meski]]
 *Italian: [[anche]] [[se]]
