--- a/en/u/Ulster Irish.742124.wikitext
+++ b/en/u/Ulster Irish.742124.wikitext
@@ -1,9 +1,9 @@
 ==English==
+{{wikipedia}}
 
 ===Proper noun===
 {{en-proper noun|sg=[[Ulster]] [[Irish]]}}
 
 # A dialect of the [[Irish]] language indigenous to Ulster.
-
 
 [[Category:Dialects]]
