--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-[[onomatopoetic|Onomatopoetic]].
+[[onomatopoeic|Onomatopoeic]].
 
 ===Pronunciation===
 *{{IPA|/kwæk/}}
