--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -41,6 +41,8 @@
 #: ''America has used many forms of torture to '''break''' their POWs.''
 # {{transitive}} To do that which is [[forbid]]den by (a rule or rules).
 #: ''When you go to Vancouver, promise me you won't '''break''' the law.''
+[[Image:100 3508.JPG|right|thumb|196px|A wave '''breaking''' (definition 13)]]
+# {{intransitive}} (''of a water wave'') To collapse into [[surf]], after arriving in [[shallow]] water.
 # {{transitive}} (''gaming slang'') To [[design]] or use a [[powerful]] (yet [[legal]]) strategy that unbalances the game in a player's favor.
 #: ''Letting white have three extra queens would '''break''' chess.''
 # {{transitive}} {{media}} {{ergative}} to [[disclose]] or [[make known]] an item of [[news]] etc
