--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -36,12 +36,11 @@
 #: ''Don't '''break''' your fingers playing basketball.''
 # {{transitive}} {{ergative}} To cause to [[malfunction]] or [[stop]] [[work]]ing altogether.
 #: ''Did you two '''break''' the trolley by racing with it?''
-# {{transitive}} To cause a person or animal to [[lose]] his/her/its [[will]], usually obtained by means of [[torture]].
+# {{transitive}} To cause a person or animal to [[lose]] his/her/its [[will]], usually obtained by means of [[torture]].[[Image:100 3508.JPG|right|thumb|196px|A wave '''breaking''' (definition 13)]]
 #: ''You have to '''break''' an elephant before you can use it as an animal of burden.''
 #: ''America has used many forms of torture to '''break''' their POWs.''
 # {{transitive}} To do that which is [[forbid]]den by (a rule or rules).
 #: ''When you go to Vancouver, promise me you won't '''break''' the law.''
-[[Image:100 3508.JPG|right|thumb|196px|A wave '''breaking''' (definition 13)]]
 # {{intransitive}} (''of a water wave'') To collapse into [[surf]], after arriving in [[shallow]] water.
 # {{transitive}} (''gaming slang'') To [[design]] or use a [[powerful]] (yet [[legal]]) strategy that unbalances the game in a player's favor.
 #: ''Letting white have three extra queens would '''break''' chess.''
