--- a/en/m/make a killing.742288.wikitext
+++ b/en/m/make a killing.742288.wikitext
@@ -1,7 +1,17 @@
 ==English==
 
 ===Etymology===
-Term was used by American bison hunters to describe the act of shooting a large number of buffalo in a short period of time.
+# Term was used by American bison hunters to describe the act of shooting a large number of buffalo in a short period of time.
+#* '''1967''', John R. Cook, ''The Border and the Buffalo'', Citadel Press, page 118 (originally published in 1907, describing events occurring in the 1870s)
+#*: The old gent said there were ten thousand in sight, this minute, not counting those in the gulches and ravines that we could not see.  After looking at them a short time we all went to camp and held a council.  Buck said if I would stay with him he would '''make a killing''' as long as it would pay to stay; said he would give me 30 cents apiece for all the buffaloes I would skin and peg out.
+#* ibid, page 170
+#*: Charlie as a rule did the most of his killing from 8 a.m. until noon, but '''made some good killings''' in the evening.
+#* ibid, page 188
+#*: Charlie had killed eighteen head near where he had '''made the big killing''' two days before.
+#* ibid, page 232
+#*: And here now I would '''make a killing'''.  Taking the best shot that presented itself, I fired...
+#* ibid, page 236
+#*: Charlie and I went up the creek a good half-day's ride and found fair hunting, to which we moved our camp the next day, and the day following I '''made the biggest killing''' of all my three years' hunting.
 
 ===Verb===
 '''to [[make]] [[a]] [[killing]]'''
