/* Translations */ checked de <countdown#3694238>

--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -17,6 +17,7 @@
 *Chinese:
 *:Mandarin: {{zh-ts|[[倒]][[數]]|[[倒]][[数]]}} ([[dào]][[shǔ]])
 *Finnish: [[lähtölaskenta]]
+*German: {{t+|de|Countdown|m}}
 *Hebrew: [[ספירה לאחור]] (sfira le'akhor) {{f}}
 {{trans-mid}}
 *Russian: [[обратный отсчёт]] (obrátnyj otš'ót) {{m}}
@@ -37,7 +38,7 @@
 
 {{checktrans-top}}
 *{{ttbc|Dutch}}: [[aftelling]] {{f}}
-*{{ttbc|German}}: [[Zeitkontrolle]] {{f}}, Countdown {{m}}
+*{{ttbc|German}}: [[Zeitkontrolle]] {{f}}
 {{trans-mid}}
 
 ;to count down (nonsense - nonstandard)
