--- a/en/e/EKG.26212.wikitext
+++ b/en/e/EKG.26212.wikitext
@@ -1,8 +1,9 @@
 ==English==
+
 ==={{initialism}}===
 '''EKG'''
 
-#[[Electrocardiogram]]
+# {{cardiology}} [[electrocardiogram]]
 
 [[de:EKG]]
 [[hu:EKG]]
