--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -65,8 +65,7 @@ From Malay [[bambu]], [[mambu]]
 *Thai: [[ไม้ไผ่]] (Mai Phai)
 {{bottom}}
 
-=====Translations to be checked=====
-{{checktrans}}
+{{checktrans-top}}
 <!--Remove this section once all the translations below have been transferred to the correct table(s).-->
 
 The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.  It is not currently clear to which sense(s) these translations apply.
@@ -74,6 +73,7 @@ The translations below need to be checked by native speakers and inserted into t
 *{{ttbc|CJK Characters}}: [[篳]], [[筚]]
 *{{ttbc|Isthmus Zapotec}}: [[bixiá]]
 *{{ttbc|Korean}}: [[대나무]]
+{{checktrans-bottom}}
 
 ====Adjective====
 '''bamboo''' (''no'' {{compar}} ''or'' {{superl}})
