/* Translations */ +trans tables, hu <bamboo#3696454>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -19,8 +19,7 @@ From Malay [[bambu]], [[mambu]]
 *[[bamboo man]]
 
 ====Translations====
-<!--DefA-->'''plant'''
-{{top}}
+{{trans-top|plant}}
 *Albanian:[[bambu]] 
 *Chinese traditional/simplified: [[竹材]],[[竹材]] (zhú cái)
 *Dutch: [[bamboe]] {{n}}
@@ -30,12 +29,13 @@ From Malay [[bambu]], [[mambu]]
 *German: [[Bambus]] {{m}}
 *Greek: [[μπαμπού]] {{n}}
 *Hebrew: [[במבוק]] (bambuq) {{m}}
+*Hungarian: {{t|hu|bambusz}}
 *Italian: [[bambù]] {{m}}
 *Indonesian:
 *:Standard Indonesian: [[bambu]], [[buluh]], [[eru]], [[aur]]
 *:Sundanese: [[awi]]
 *:Banjarese: [[paring]], [[buluh]]
-{{mid}}
+{{trans-mid}}
 *Japanese: [[竹]] (たけ, take)
 *Malay: [[pokok]] [[buluh]]
 *Portuguese: [[bambu]] {{m}}
@@ -44,10 +44,9 @@ From Malay [[bambu]], [[mambu]]
 *Spanish: [[bambú]] {{m}}
 *[[Tagalog]]: [[kawayan]]
 *Thai: [[ไผ่]] (phai)
-{{bottom}}
+{{trans-bottom}}
 
-<!--DefB-->'''wood'''
-{{top}}
+{{trans-top|wood}}
 *Albanian: [[bambu]]
 *Chinese traditional/simplified: [[竹子]],[[竹子]] (zhú zi)
 *Dutch: [[bamboe]] {{n}}
@@ -56,14 +55,14 @@ From Malay [[bambu]], [[mambu]]
 *French: [[bambou]] {{m}}
 *Hebrew: [[במבוק]] (bambuq) {{m}}
 *Italian: [[bambù]] {{m}}
-{{mid}}
+{{trans-mid}}
 *Japanese: [[竹材]] (たけざい, takezai)
 *Portuguese: [[bambu]] {{m}}
 *Russian: [[бамбук]] {{m}}
 *Slovene: [[bambus]] {{m}}
 *[[Tagalog]]: [[kawayan]]
 *Thai: [[ไม้ไผ่]] (Mai Phai)
-{{bottom}}
+{{trans-bottom}}
 
 {{checktrans-top}}
 <!--Remove this section once all the translations below have been transferred to the correct table(s).-->
