format updated, use newer templates where appropriate <whistle#3697196>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -82,22 +82,22 @@
 {{trans-bottom}}
 
 {{trans-top|sound made by whistling}}
-* [[Breton]]: [[c'hwitelladenn]] {{f}}, [[c'hwitelladennoù]] {{p}}
-* Croatian: [[zvižduk]] {{m}}
-* Danish: [[fløjt]] {{n}}
-* Dutch: [[fluittoon]] {{m}}
-* Finnish: [[vihellys]], [[vislaus]]
-* Hungarian: [[füttyszó]]
+* [[Breton]]: {{t|br|c'hwitelladenn|f}}, {{t|br|c'hwitelladennoù|p}}
+* Croatian: {{t|hr|zvižduk|m}}
+* Danish: {{t|da|fløjt|n}}
+* Dutch: {{t|nl|fluittoon|m}}
+* Finnish: {{t|fi|vihellys}}, {{t|fi|vislaus}}
+* Hungarian: {{t|hu|füttyszó}}
 {{trans-mid}}
-* Japanese: [[口笛]] (くちぶえ, kuchibue)
-* Polish: [[gwizd]] {{m}}
-* Portuguese: [[apito]] {{m}}, [[assobio]] {{m}}
+* Japanese: {{t|ja|sc=Japn|口笛|tr=[[くちぶえ]], kuchibue}}
+* Polish: {{t|pl|gwizd|m}}
+* Portuguese: {{t|pt|apito|m}}, {{t|pt|assobio|m}}
 * Russian: {{t|ru|свист|m|tr=svist|sc=Cyrl}}
-* Swedish: [[vissling]] {{c}}
+* Swedish: {{t|sv|vissling|c}}
 {{trans-bottom}}
 
 {{trans-top|sound similar to the sound made by whistling}}
-* [[Breton]]: [[c'hwitelladenn]] {{f}}, [[c'hwitelladennoù]] {{p}}
+* [[Breton]]: {{t|br|c'hwitelladenn|f}}, {{t|br|c'hwitelladennoù|p}}
 * Croatian: [[zvižduk]] {{m}}
 * Danish: [[fløjt]] {{n}}
 * Dutch: [[fluittoon]] {{m}}
