/* Translations */ fix <whistle#3697199>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -89,7 +89,7 @@
 * Finnish: {{t|fi|vihellys}}, {{t|fi|vislaus}}
 * Hungarian: {{t|hu|füttyszó}}
 {{trans-mid}}
-* Japanese: {{t|ja|sc=Japn|口笛|tr=[[くちぶえ]], kuchibue}}
+* Japanese: {{t|ja|sc=Jpan|口笛|tr=[[くちぶえ]], kuchibue}}
 * Polish: {{t|pl|gwizd|m}}
 * Portuguese: {{t|pt|apito|m}}, {{t|pt|assobio|m}}
 * Russian: {{t|ru|свист|m|tr=svist|sc=Cyrl}}
