/* Crimean Tatar */ <bet#3699400>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -107,7 +107,10 @@
 # [[page]]
 
 ===Declension===
-{{crh-latin-noun|ıñ|ke|nı|te|ten}}
+{{crh-latin-noun|niñ|ke|ni|te|ten}}
+
+=== Synonyms ===
+* [[yüz]] (face)
 
 ===References===
 {{R:Useinov-Mireev 2002}}
