--- a/en/m/make a killing.742288.wikitext
+++ b/en/m/make a killing.742288.wikitext
@@ -2,6 +2,13 @@
 
 ===Etymology===
 # Term was used by American bison hunters to describe the act of shooting a large number of buffalo in a short period of time.
+
+===Verb===
+{{infl|en|verb|head=to [[make]] [[a]] [[killing]]}}
+
+# {{idiom}} To win or earn a large amount of [[money]]. 
+
+====Quotations====
 #* '''1907''', John R. Cook, ''The Border and the Buffalo'', Citadel Press (1967), page 118 (describing events occurring in the 1870s)
 #*: The old gent said there were ten thousand in sight, this minute, not counting those in the gulches and ravines that we could not see.  After looking at them a short time we all went to camp and held a council.  Buck said if I would stay with him he would '''make a killing''' as long as it would pay to stay; said he would give me 30 cents apiece for all the buffaloes I would skin and peg out.
 #* ibid, page 170
@@ -14,10 +21,3 @@
 #*: Charlie and I went up the creek a good half-day's ride and found fair hunting, to which we moved our camp the next day, and the day following I '''made the biggest killing''' of all my three years' hunting.
 #* '''1900''', J.H. Cardell, ''Letter to the Editor'', Recreation, page [http://books.google.com/books?id=cEMQAAAAYAAJ&pg=PA36&dq=%22make+a+killing%22+buffalo&lr= 36] 
 #*: I feel at times as though I should like, as the boys on the plains used to say, to take my gun and '''make a killing'''. I have in the past, as I suppose all old timers have, killed game out of season: but when I think of the buffalo, the elk, the deer, and the antelope that are now comparatively speaking gone forever, it makes me long for a law that would prohibit killing for 10 or 15 years.
-
-===Verb===
-'''to [[make]] [[a]] [[killing]]'''
-
-# {{idiom}} To win or earn a large amount of [[money]]. 
-
-[[Category:English verbs]]
