--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -64,6 +64,7 @@
 [[it:adjustment]]
 [[kk:adjustment]]
 [[lt:adjustment]]
+[[li:adjustment]]
 [[hu:adjustment]]
 [[ja:adjustment]]
 [[pl:adjustment]]
