/* English */  +Scots <again#3716713>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -86,6 +86,39 @@
 
 [[Category:200 English basic words]]
 
+----
+
+==Scots==
+===Alternative forms===
+*[[agin]]
+
+===Etymology===
+{{OE.|sco}} {{term|ongean|onġēan}}.
+
+===Pronunciation===
+{{IPA|/əˈgen/|/əˈgɛn/}}
+
+===Adverb===
+'''again'''
+
+# [[back]], in the opposite direction
+# [[#English|again]], [[anew]]
+
+===Preposition===
+'''again'''
+
+# [[opposite]], [[facing]]
+# [[against]], opposed to (literally or figuratively)
+
+===Conjunction===
+'''again'''
+
+# in preparation for, in advance of
+
+[[Category:Scots adverbs]]
+[[Category:Scots prepositions]]
+[[Category:Scots conjunctions]]
+
 [[ar:again]]
 [[de:again]]
 [[el:again]]
