--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -8,7 +8,7 @@ From {{F.}} ''[[grognard#French|grognard]]'' "grognard".
 {{en-noun}}
 
 # An [[old]] [[soldier]].
-# A wargamer.
+# {{rfv-sense|not my bailiwick}} A wargamer.
 ----
 
 ==French==
