noun -> proper noun | {{en-proper noun}} <PALplus#3718956>

--- a/en/p/PALplus.803394.wikitext
+++ b/en/p/PALplus.803394.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
-===Noun===
-'''PALplus'''
+===Proper noun===
+{{en-proper noun}}
 
 # An [[enhanced]] version of the [[PAL]] [[TV]] [[system]] capable of [[transmitting]] pictures in the 16:9 [[widescreen]] [[format]].
 #* '''1997''', Helen S. Wallace, Alasdair R. Young, ''Participation and Policy-Making in the European Union'', page 192
