--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -4,10 +4,10 @@
 {{rank|still|just|while|144|again|also|away|against}}
 
 ===Pronunciation===
-*{{IPA|əˈgeɪn/, /əˈgɛn}}/}} {{SAMPA|/@"geIn/, /@"gEn/}}
-*{{audio|en-us-again.ogg|Audio (US)}}
-*:{{rhymes|eɪn}}
-*Hyphenation: a&middot;gain
+* {{IPA|əˈgeɪn/, /əˈgɛn}}/}} {{SAMPA|/@"geIn/, /@"gEn/}}
+* {{audio|en-us-again.ogg|Audio (US)}}
+*: {{rhymes|eɪn}}
+* Hyphenation: a&middot;gain
 
 ===Etymology===
 {{OE.}} ''[[onġean]]''.
@@ -19,69 +19,69 @@
 #: ''I didn't do a very good job the first time, and now I have to do it '''again'''.''
 
 ====Related terms====
-*[[again and again]]
-*[[once again]]
+* [[again and again]]
+* [[once again]]
 
 ====Translations====
 {{trans-top|having already happened before}}
-*[[Afrikaans]]: [[weer]], [[alweer]]
-*Arabic: {{Arab|[[مرة اخرى]]}} {{unicode|(mára ’úxra)}}
-*{{trreq|Armenian}}
-*Basque: [[berriro]]
-*[[Breton]]: [[adarre]]
-*Bulgarian: [[отново]] (otnovo), [[пак]] (pak)
-*{{trreq|Burmese}}
-*Catalan: [[una]] [[altre]] [[vegada]], [[de]] [[nou]]
-*Chinese: [[再]] (zài)
-*{{trreq|Croatian}}
-*Czech: [[zase]], [[opět]], [[znova]]
-*Danish: [[igen]]
-*Dutch: [[opnieuw]], [[nogmaals]], [[weer]], [[wederom]]
-*Esperanto: [[denove]], [[ree]]
-*Estonian: [[jälle]]
-*Finnish: [[taas]], [[uudelleen]], [[jälleen]], [[toistamiseen]], [[vielä kerran]]
-*French: [[de nouveau]], [[encore]]
-*Georgian: [[ხელახლა]] (xelaxla), [[კვლავ]] (kvlav), [[ისევ]] (isev)
-*German: [[erneut]], [[noch einmal]], [[nochmal]], [[wieder]]
-*Greek: [[ξανά]] (ksana), [[πάλι]] (pali)
-*{{trreq|Hawaiian}}
-*Hebrew: [[שוב]] (šuv)
-*Hindi: [[फिर]]
-*Hungarian: [[újra]], [[megint]], [[ismét]]
-*Icelandic: [[aftur]]
-*[[Ido]]: [[ankore un foyo]], [[ankorfoye]]
-*Indonesian: [[lagi]]
-*Italian: [[di nuovo]], [[ancora]]
+* [[Afrikaans]]: [[weer]], [[alweer]]
+* Arabic: {{Arab|[[مرة اخرى]]}} {{unicode|(mára ’úxra)}}
+* {{trreq|Armenian}}
+* [[Basque]]: [[berriro]]
+* [[Breton]]: [[adarre]]
+* Bulgarian: [[отново]] (otnovo), [[пак]] (pak)
+* {{trreq|Burmese}}
+* [[Catalan]]: [[una]] [[altre]] [[vegada]], [[de]] [[nou]]
+* Chinese: [[再]] (zài)
+* {{trreq|Croatian}}
+* Czech: [[zase]], [[opět]], [[znova]]
+* Danish: [[igen]]
+* Dutch: [[opnieuw]], [[nogmaals]], [[weer]], [[wederom]]
+* Esperanto: [[denove]], [[ree]]
+* Estonian: [[jälle]]
+* Finnish: [[taas]], [[uudelleen]], [[jälleen]], [[toistamiseen]], [[vielä kerran]]
+* French: [[de nouveau]], [[encore]]
+* Georgian: [[ხელახლა]] (xelaxla), [[კვლავ]] (kvlav), [[ისევ]] (isev)
+* German: [[erneut]], [[noch einmal]], [[nochmal]], [[wieder]]
+* Greek: [[ξανά]] (ksana), [[πάλι]] (pali)
+* {{trreq|Hawaiian}}
+* Hebrew: [[שוב]] (šuv)
+* Hindi: [[फिर]]
+* Hungarian: [[újra]], [[megint]], [[ismét]]
+* Icelandic: [[aftur]]
+* [[Ido]]: [[ankore un foyo]], [[ankorfoye]]
+* Indonesian: [[lagi]]
+* Italian: [[di nuovo]], [[ancora]]
 {{trans-mid}}
-*Japanese: [[また]] (mata); [[再び]] (ふたたび, futatabi); [[もう一度]] (mō ichido); [[あらためて]] (aratamete)
-*{{trreq|Kannada}}
-*Khmer: {{KMchar|[[ទៀត]]}} (dtīət), {{KMchar|[[ម្ដងទៀត]]}} (mdorng dtīət)
-*Korean: [[다시]] (dasi)
-*Kurdish: {{KUchar|[[دیسان]]}}, {{KUchar|[[هه‌مدیس]]}}, {{KUchar|[[دوباره‌]]}}
-*Latin: [[denuo]]
-*Latvian: [[pret]]
-*Lithuanian: [[vėl]]
-*{{trreq|Malayalam}}
-*{{trreq|Maltese}}
-*{{trreq|Maori}}
-*{{trreq|Mongolian}}
-*Norwegian: [[igjen]]
-*Persian: [[دگربار]]
-*Polish: [[ponownie]], [[jeszcze raz]], [[znowu]]
-*Portuguese: [[outra vez]], [[novemente]]
-*Romanian: [[iarăşi]], [[din nou]]
-*Russian: [[опять]] (opját’)
-*Sanskrit: [[पुनः]]
-*Serbian: [[opet]], [[ponovo]], [[obnova]], [[snova]], [[odnova]]
-*Slovene: [[spet]], [[ponovno]], [[znova]]
-*Spanish: [[otra vez]], [[de nuevo]]
-*Swedish: [[igen]], [[åter]], [[på nytt]]
-*[[Telugu]]: [[మళ్లీ]] (mallee), [[మరలా]] (maralaa)
-*Thai: {{Thai|[[อีก]]}} (èek), {{Thai|[[ใหม่]]}} (mài)
-*Turkish: [[yeniden]], [[tekrar]], [[gene]]
-*Vietnamese: [[lại]]
-*Welsh: [[eto]]
-*Yiddish: [[ווידער]] (vider), [[נאָכאַמאָל]] (nokhamol)
+* Japanese: [[また]] (mata); [[再び]] (ふたたび, futatabi); [[もう一度]] (mō ichido); [[あらためて]] (aratamete)
+* {{trreq|Kannada}}
+* [[Khmer]]: {{KMchar|[[ទៀត]]}} (dtīət), {{KMchar|[[ម្ដងទៀត]]}} (mdorng dtīət)
+* Korean: [[다시]] (dasi)
+* Kurdish: {{KUchar|[[دیسان]]}}, {{KUchar|[[هه‌مدیس]]}}, {{KUchar|[[دوباره‌]]}}
+* Latin: [[denuo]]
+* Latvian: [[pret]]
+* Lithuanian: [[vėl]]
+* {{trreq|Malayalam}}
+* {{trreq|Maltese}}
+* {{trreq|Maori}}
+* {{trreq|Mongolian}}
+* Norwegian: [[igjen]]
+* Persian: [[دگربار]]
+* Polish: [[ponownie]], [[jeszcze raz]], [[znowu]]
+* Portuguese: [[outra vez]], [[novemente]]
+* Romanian: [[iarăşi]], [[din nou]]
+* Russian: [[опять]] (opját’)
+* Sanskrit: [[पुनः]]
+* Serbian: [[opet]], [[ponovo]], [[obnova]], [[snova]], [[odnova]]
+* Slovene: [[spet]], [[ponovno]], [[znova]]
+* Spanish: [[otra vez]], [[de nuevo]]
+* Swedish: [[igen]], [[åter]], [[på nytt]]
+* [[Telugu]]: [[మళ్లీ]] (mallee), [[మరలా]] (maralaa)
+* Thai: {{Thai|[[อีก]]}} (èek), {{Thai|[[ใหม่]]}} (mài)
+* Turkish: [[yeniden]], [[tekrar]], [[gene]]
+* Vietnamese: [[lại]]
+* Welsh: [[eto]]
+* Yiddish: [[ווידער]] (vider), [[נאָכאַמאָל]] (nokhamol)
 {{trans-bottom}}
 
 [[Category:200 English basic words]]
@@ -89,8 +89,9 @@
 ----
 
 ==Scots==
+
 ===Alternative forms===
-*[[agin]]
+* [[agin]]
 
 ===Etymology===
 {{OE.|sco}} {{term|ongean|onġēan}}.
@@ -116,8 +117,8 @@
 # in preparation for, in advance of
 
 [[Category:Scots adverbs]]
-[[Category:Scots prepositions]]
 [[Category:Scots conjunctions]]
+[[Category:Scots prepositions]]
 
 [[ar:again]]
 [[de:again]]
