--- a/en/m/microdot.720320.wikitext
+++ b/en/m/microdot.720320.wikitext
@@ -1,13 +1,13 @@
 ==English==
+{{wikipedia}}
 
 ===Noun===
-{{wikipedia}}
 {{en-noun}}
 
-# A [[photographic]] [[image]] that has been reduced in size to that of a [[dot]] in order to escape detection. Microdots are typically around 1mm in size and circular in shape. Photographic images typically include textual information of some form. Microdots are typically used as asset identifiers with parts of an asset able to be individually marked with a PIN number, VIN, or other unique identifier. These asset identifiers allow tracking and identification of the rightful owner in the event of theft or loss. <ref name=microdots>[http://www.micro-dots.org/ DotGuard Microdots]</ref>.
+# A [[photographic]] [[image]] that has been [[reduce]]d in size to that of a [[dot]] (typically around 1mm in size and circular) in order to escape detection. <ref name=microdots>[http://www.micro-dots.org/ DotGuard Microdots]</ref>.
 
+===References===
+<references/>
 
 [[vi:microdot]]
 [[zh:microdot]]
-== References ==
-<references/>
