Added French translation <adjustment#3724316>

--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -29,7 +29,7 @@
 *Dutch: [[aanpassing]] {{f}}, [[bijregeling]] {{f}}
 *Esperanto: [[]]
 *Finnish: [[säätö]], [[hienosäätö]]
-*French: [[arèglement]] {{m}}
+*French: [[ajustement]] {{m}} [[arèglement]] {{m}}
 *[[Frisian]]: [[]]
 *German: [[Anpassung]] {{f}}
 *Greek: [[διευθέτηση]] (diefthetisi) {{f}}, [[ρύθμιση]] (rithmisi) {{f}}, [[προσαρμογή]] (prosarmogí) {{f}}, [[διαβάθμηση]] (diaváthmisi) {{f}}
