--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -1,12 +1,13 @@
 ==English==
 
 ===Etymology===
-Japanese “Luck of Heaven” or "Luck of the Angels"
+{{rfd|what deserves mention in the etymology?}}
+
+From ''[[w:Nintendo|Nintendo Company, Limited]]'' (任天堂株式会社), the Japanese manufacturer, from Japanese 任天堂 (Nintendō) “Luck of Heaven” or “Luck of the Angels”
 
 ===Proper noun===
 {{en-noun|Nintendo|es}}
 
-# {{rfd-sense}} A [[Japanese]] [[manufacturer]] known for its [[games console]]s, founded in 1989.
 # [[w:Nintendo Entertainment System|Nintendo Entertainment System]].
 #* '''1995''', David Gladstone, ed., ''British Social Welfare: Past, Present, and Future'', page 274
 #*: There is nothing wrong with the accoutrements of personal affluence, but if the numbers of personal stereos, '''Nintendos''', mobile phones and cars grow […].
