/* Translations to be checked */ standardized <bound#3732562>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -43,11 +43,11 @@
 * Swedish: {{t+|sv|gräns|c}}
 {{trans-bottom}}
 
-=====Translations to be checked=====
-{{rfc-trans}}
-*Dutch: [[limiet]] (1), [[grens]] (1), [[landpaal]] (1)
-*Spanish: [[acotado]]
-*Telugu: పరిధి
+{{checktrans-top}}
+*{{ttbc|Dutch}}: [[limiet]] (1), [[grens]] (1), [[landpaal]] (1)
+*{{ttbc|Spanish}}: [[acotado]]
+*{{ttbc|Telugu}}: పరిధి
+{{checktrans-bottom}}
 
 =====Derived terms=====
 *[[boundary]]
