use script template <bubble#3735279>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -45,7 +45,7 @@ Partly imitative, also influenced by {{term|burble}}.
 
 {{trans-top|period of intense speculation in a market}}
 * French: {{t+|fr|bulle|f}}
-* Hebrew: {{t|he|בועה|tr=bu'a|f}}
+* Hebrew: {{t|he|בועה|tr=bu'a|f|sc=Hebr}}
 {{trans-mid}}
 * [[Telugu]]: {{t|te|బుడగ|tr=buDaga}}
 {{trans-bottom}}
