--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -66,7 +66,7 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 * Greek: {{t+|el|πράγμα|n|tr=prágma|sc=Grek}}
 * [[Guarani]]: [[mba'e]]
 * [[Gujarati]]: [[વસ્તુ]] (vastu)
-* {{trreq|Hawaiian}}
+* Hawaiian: [[mea#Hawaiian|mea]]
 * Hebrew: [[דבר]] (davar) {{m}}
 * Hindi: [[वस्तू]] (vastū) {{m}}, [[चीज़]] (chīz) {{f}}
 * Hungarian: {{t+|hu|dolog}}
