--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -26,7 +26,7 @@
 {{trans-top|having already happened before}}
 * [[Afrikaans]]: [[weer]], [[alweer]]
 * Arabic: {{Arab|[[مرة اخرى]]}} {{unicode|(mára ’úxra)}}
-* Armenian: [[էլի]]
+* Armenian: [[էլի]] (ēli)
 * [[Basque]]: [[berriro]]
 * [[Breton]]: [[adarre]]
 * Bulgarian: [[отново]] (otnovo), [[пак]] (pak)
@@ -55,7 +55,7 @@
 {{trans-mid}}
 * Japanese: [[また]] (mata); [[再び]] (ふたたび, futatabi); [[もう一度]] (mō ichido); [[あらためて]] (aratamete)
 * {{trreq|Kannada}}
-* [[Khmer]]: {{KMchar|[[ទៀត]]}} (dtīət), {{KMchar|[[ម្ដងទៀត]]}} (mdorng dtīət)
+* [[Khmer]]: {{Khmr|[[ទៀត]]}} (dtīət), {{Khmr|[[ម្ដងទៀត]]}} (mdorng dtīət)
 * Korean: [[다시]] (dasi)
 * Kurdish: {{KUchar|[[دیسان]]}}, {{KUchar|[[هه‌مدیس]]}}, {{KUchar|[[دوباره‌]]}}
 * Latin: [[denuo]]
