--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -88,6 +88,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 [[io:fraction]]
 [[id:fraction]]
 [[it:fraction]]
+[[hu:fraction]]
 [[ja:fraction]]
 [[ru:fraction]]
 [[fi:fraction]]
