wl [[]] <rough-and-tumbles#3751438>

--- a/en/r/rough-and-tumbles.802184.wikitext
+++ b/en/r/rough-and-tumbles.802184.wikitext
@@ -1,7 +1,9 @@
 ==English==
 
 ===Noun===
-{{plural of|rough-and-tumble}}
+'''rough-and-tumbles'''
+# {{plural of|[[rough-and-tumble]]}}
 
 ===Verb===
-{{third-person singular of|rough and tumble}}
+'''rough-and-tumbles'''
+# {{third-person singular of|[[rough-and-tumble]]}}
