--- a/en/i/indention.742103.wikitext
+++ b/en/i/indention.742103.wikitext
@@ -5,5 +5,6 @@
 
 # The act of [[indent]]ing a line of [[text]] by including [[blank]] [[space]] at the beginning
 
+[[hu:indention]]
 [[vi:indention]]
 [[zh:indention]]
