checked LV trans <weasel#3754549>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -30,6 +30,7 @@ The word ''weasel'' is the direct descendant of {{OE.}} ''[[wesule]]'', ''[[wesl
 * Greek: {{t|el|νυφίτσα|f|s|sc=Grek}} (nifítsa)
 {{trans-mid}}
 * Japanese: [[鼬]] ([[イタチ]], itachi)
+* Latvian: [[zebiekste]] {{f}}
 * Polish: {{t+|pl|łasica|f}}
 * Russian: {{t+|ru|ласка|f|tr=láska|sc=Cyrl}}
 {{trans-bottom}}
@@ -69,7 +70,6 @@ The word ''weasel'' is the direct descendant of {{OE.}} ''[[wesule]]'', ''[[wesl
 {{trans-mid}}
 *{{ttbc|Ladin}}: [[belora]]
 *{{ttbc|Latin}}: [[mustela#Latin|mustela]]
-*{{ttbc|Latvian}}: [[zebiekste]]
 *{{ttbc|Lithuanian}}: [[žebenkštis]]
 *{{ttbc|Lower Sorbian}}: [[łasyca]], [[łasycka]]
 *{{ttbc|Macedonian}}: [[ласица]] {{f}}
