--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -41,7 +41,7 @@
 * [[Basque]]: {{t|eu|irla}}, {{t|eu|uharte}}
 * Bengali: [[দবীপ]]
 * Bulgarian: {{t|bg|остров|m|tr=òstrov|sc=Cyrl}}
-* {{trreq|Burmese}}
+* Burmese: [[ကယ့န္း]] (kyùn)
 * [[Catalan]]: {{t|ca|illa|f}}
 * Chinese: [[岛]]
 * [[Crimean Tatar]]: [[ada#Crimean Tatar|ada]]
