--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -243,8 +243,8 @@
 * Slovene: [[zlomiti]] (two pieces), [[razbiti]] (more pieces)
 * Spanish: {{t+|es|romper}}, {{t+|es|quebrar}}
 * Swedish: [[bryta]], [[ta sönder]] (''deliberately''), [[ha sönder]] (''involunterally'') (''familiar''), [[slå sönder]] (''violently'')
-* Thai: {{Thai|[[แตก]]}} (dtàek), {{Thai|[[เลิก]]}} (lêrk
-* {{trreq|Turkish}}
+* Thai: {{Thai|[[แตก]]}} (dtàek), {{Thai|[[เลิก]]}} (lêrk)
+* Turkish: [[kırmak]]
 {{trans-bottom}}
 
 {{trans-top|transitive: of a bone, intentionally}}
