template -Wikipedia +wikipedia <Wembley#3761875>

--- a/en/w/Wembley.803277.wikitext
+++ b/en/w/Wembley.803277.wikitext
@@ -1,9 +1,10 @@
 ==English==
-{{Wikipedia}}
+{{wikipedia}}
+
 ===Proper noun===
-{{Wikipedia|Wembley Stadium}}
+{{wikipedia|Wembley Stadium}}
 {{en-proper-noun}}
 
 # A suburb of north-west [[London]], [[England]]
 # A stadium in [[London]], the national sports stadium and venue where finals of major [[football]] tournaments are held.
-#:''If they carry on with their good form, there'll be at '''Wembley''' at the end of the season.''
+#: ''If they carry on with their good form, there'll be at '''Wembley''' at the end of the season.''
