sg= wl <flat affect#3764828>

--- a/en/f/flat affect.802766.wikitext
+++ b/en/f/flat affect.802766.wikitext
@@ -1,5 +1,6 @@
 ==English==
 ===Noun===
-{{en-noun}}
+{{en-noun|sg=[[flat]] [[affect]]}}
 
-# Lack of emotion; lack of apparent emotion
+# Lack of [[emotion]].
+# Lack of apparent emotion.
