--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -90,6 +90,7 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 [[ku:though]]
 [[li:though]]
 [[hu:though]]
+[[nl:though]]
 [[ja:though]]
 [[pl:though]]
 [[simple:though]]
