--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -37,13 +37,14 @@
 {{trans-top|area of land surrounded by water}}
 * [[Afrikaans]]: [[eiland]]
 * Albanian: {{t-|sq|ishull|m|xs=Albanian}}, {{t-|sq|ujdhesë|f|xs=Albanian}}
+* Arabic: {{Arab|[[جزيرة|جَزِيرَة]]}} (jazeera) {{f}}
 * Armenian: {{t|hy|կղզի|tr=kġzi|sc=Hayeren|xs=Armenian}}
 * [[Basque]]: {{t-|eu|irla|xs=Basque}}, {{t-|eu|uharte|xs=Basque}}
 * Bengali: [[দবীপ]]
 * Bulgarian: {{t-|bg|остров|m|tr=òstrov|sc=Cyrl}}
 * Burmese: [[ကယ့န္း]] (kyùn)
 * [[Catalan]]: {{t+|ca|illa|f}}
-* Chinese: [[岛]]
+* Chinese: [[岛]] (dǎo)
 * [[Crimean Tatar]]: [[ada#Crimean Tatar|ada]]
 * Croatian: {{t-|hr|otok|m}}
 * Czech: {{t+|cs|ostrov|m}}
@@ -78,7 +79,7 @@
 * Norwegian: {{t+|no|øy|m|f}}
 * Old English: {{t-|ang|ieg|f|alt=īeġ|xs=Old English}}
 * {{trreq|Oriya}}
-* Persian: [[جزيره]]
+* Persian: {{fa-Arab|[[جزيره]]}} (jazîreh)
 * Polish: {{t+|pl|wyspa|f}}
 * Portuguese: {{t+|pt|ilha|f}}
 * [[Punjabi]]: [[ਟਾਪੂ]]
@@ -92,7 +93,7 @@
 * Swedish: {{t+|sv|ö|c}}, {{t+|sv|holme|c}}, {{t+|sv|kobbe|c}}, {{t+|sv|skär|n}}
 * {{trreq|Tamil}}
 * {{trreq|Telugu}}
-* Thai: {{t|th|เกาะ|gòr|tr=|xs=Thai}}
+* Thai: {{t|th|เกาะ|tr=gòr|xs=Thai}}
 * Turkish: {{t+|tr|ada}}
 * [[Upper Sorbian]]: [[kupa]] {{f}}
 * Vietnamese: {{t+|vi|đảo|xs=Vietnamese}}
