--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -124,7 +124,7 @@
 {{checktrans}}
 {{trans-top|translations to be checked}}
 * {{ttbc|Ainu}}: [[モシリ|モシ<span style="font-size:70%;">リ</span>]] (moshir)
-* {{ttbc|Arabic}}: {{ARchar|[[جزيرة|جَزِيرَة]]}} {{unicode|(jazīra)}} {{f}}, {{ARchar|[[جزائر|جَزَائِر]]}} {{unicode|(jazā’ir)}} {{p}}, {{ARchar|[[جزر|جُزُر]]}} (júzur) {{p}}
+* {{ttbc|Arabic}}: {{Arab|[[جزيرة|جَزِيرَة]]}} {{unicode|(jazīra)}} {{f}}
 * {{ttbc|Basque}}: [[irla]], [[uharte]]
 * {{ttbc|Bosnian}}: [[ostrvo#Bosnian|ostrvo]] {{n}}
 * {{ttbc|Catalan}}: [[illa]] {{f}}
