--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -36,11 +36,13 @@
 ====Translations====
 {{trans-top|area of land surrounded by water}}
 * [[Afrikaans]]: [[eiland]]
+* Ainu: [[モシリ|モシ<span style="font-size:70%;">リ</span>]] (moshir)
 * Albanian: {{t-|sq|ishull|m|xs=Albanian}}, {{t-|sq|ujdhesë|f|xs=Albanian}}
 * Arabic: {{Arab|[[جزيرة|جَزِيرَة]]}} (jazeera) {{f}}
 * Armenian: {{t|hy|կղզի|tr=kġzi|sc=Hayeren|xs=Armenian}}
 * [[Basque]]: {{t-|eu|irla|xs=Basque}}, {{t-|eu|uharte|xs=Basque}}
 * Bengali: [[দবীপ]]
+* Bosnian: [[ostrvo#Bosnian|ostrvo]] {{n}}
 * Bulgarian: {{t-|bg|остров|m|tr=òstrov|sc=Cyrl}}
 * Burmese: [[ကယ့န္း]] (kyùn)
 * [[Catalan]]: {{t+|ca|illa|f}}
@@ -53,25 +55,36 @@
 * Esperanto: {{t-|eo|insulo|xs=Esperanto}}
 * Estonian: {{t-|et|saar}}, {{t|et|ohutussaar}}
 * Faroese: [[oyggj]] {{f}}, (small island, or river-island) [[hólmur]] {{m}}
+* Fijian: [[yanuyanu]]
 * Finnish: {{t+|fi|saari}}
 * French: {{t+|fr|île|f}}
 * Georgian: [[კუნძული]] (kundzuli)
 * German: {{t+|de|Insel|f}}
-* Greek: {{t+|el|νησί|n|tr=nisí|sc=Grek}}
+* Greek:
+*: Ancient: {{t+|el|νήσος|f|tr=nísos|sc=Grek}}
+*: Modern: {{t+|el|νησί|n|tr=nisí|sc=Grek}}
 * [[Gujarati]]: [[દ્વીપ]]
 * Hebrew: {{he-translation|אי|i|wv=אִי}} {{m}}
 * Hindi: [[द्वीप]]
 * Hungarian: {{t+|hu|sziget}}
 * Icelandic: {{t+|is|ey|f}}, {{t+|is|eyja}}
+* Ilocano: [[puro]]
+* Indonesian: [[pulau]], [[nusa]]
+* Irish: [[oileán]] ''m1''
 * Italian: {{t+|it|isola|f}}
 * Japanese: [[島]] ([[しま]], shimá)
 * {{trreq|Kannada}}
 * [[Khmer]]: {{KMchar|[[កោះ]]}} (goh)
-* {{trreq|Lao}}
+* Korean: [[섬]] (seom)
 {{trans-mid}}
+* {{ttbc|Kurdish}}: [[girav]], [[dûrge]]
+* {{ttbc|Lithuanian}}: [[sala]] {{f}}
+* {{trreq|Lao}}
 * Latin: {{t+|la|insula|f}}
 * Latvian: {{t-|lv|sala|f|xs=Latvian}}
 * Lithuanian: {{t+|lt|sala|f|xs=Lithuanian}}
+* Malay: [[pulau]]
+* Maori: [[motu]]
 * {{trreq|Maltese}}
 * [[Marathi]]: [[बेट]]
 * [[Lower Sorbian]]: [[kupa]] {{f}}
@@ -87,12 +100,18 @@
 * [[Romansch]]: {{t-|rm|insla|f|xs=Romansch}}
 * Russian: {{t+|ru|остров|m|tr=óstrov|sc=Cyrl}}
 * Sanskrit: [[जलवेष्टितभूमिः]]
-* {{trreq|Slovak}}
+* Sardinian: [[isula]] {{f}}
+* Scottish Gaelic: [[eilean]] {{m}}
+* Serbian:
+*: Cyrillic: [[острво#Serbian|острво]] {{n}}
+*: Roman: [[ostrvo#Serbian|ostrvo]] {{n}}
+* Slovak: [[ostrov]] {{m}}
 * Slovene: {{t+|sl|otok|m}}
 * Spanish: {{t+|es|isla|f}}
 * Swedish: {{t+|sv|ö|c}}, {{t+|sv|holme|c}}, {{t+|sv|kobbe|c}}, {{t+|sv|skär|n}}
+* Tagalog: [[pulo]]
 * {{trreq|Tamil}}
-* {{trreq|Telugu}}
+* Telugu: [[దీవి]] (dIvi), [[ద్వీపం]] (dveepaM)
 * Thai: {{t|th|เกาะ|tr=gòr|xs=Thai}}
 * Turkish: {{t+|tr|ada}}
 * [[Upper Sorbian]]: [[kupa]] {{f}}
@@ -124,7 +143,7 @@
 {{checktrans}}
 {{trans-top|translations to be checked}}
 * {{ttbc|Ainu}}: [[モシリ|モシ<span style="font-size:70%;">リ</span>]] (moshir)
-* {{ttbc|Arabic}}: {{Arab|[[جزيرة|جَزِيرَة]]}} {{unicode|(jazīra)}} {{f}}
+* {{ttbc|Arabic}}: {{Arab|[[جزيرة|جَزِيرَة]]}} (jazīra) {{f}}
 * {{ttbc|Basque}}: [[irla]], [[uharte]]
 * {{ttbc|Bosnian}}: [[ostrvo#Bosnian|ostrvo]] {{n}}
 * {{ttbc|Catalan}}: [[illa]] {{f}}
@@ -147,7 +166,7 @@
 * {{ttbc|Malay}}: [[pulau]]
 * {{ttbc|Maori}}: [[motu]]
 * {{ttbc|Persian}}: {{FAchar|[[جزیره|جَزِیرَه]]}} (jazireh)
-* {{ttbc|Romanian}}: [[insulã]] {{f}}, [[insule]] {{p}}
+* {{ttbc|Romanian}}: [[insulă]] {{f}}, [[insule]] {{p}}
 * {{ttbc|Sardinian}}: [[isula]] {{f}}
 * {{ttbc|Scottish Gaelic}}: [[eilean]] {{m}}, [[innis]] ''f (less common)''
 * {{ttbc|Serbian}}
