--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -32,19 +32,19 @@ Pictographic representation, originally of the crescent moon.
 {{ja-noun|k|hira=つき|rom=tsuki}}
 
 # the [[moon]]
-#* [[日本]][[では]][[月]][[に]][[うさぎ]][[が]][[住む|住ん]][[だ|で]][[いる]][[と]][[いう]][[お話]][[が]][[ある|あり]][[ます]]。
-#: にほんではつきにうさぎがすんでいるというおはなしがあります。
-#: nihon dewa tsuki ni usagi ga sunde iru toiu ohanashi ga arimasu.
-#: In Japan, there is a fairy-tale that rabbits live on the moon.
-#* [[月]][[は]][[地球]][[の]][[唯一]][[の]][[衛星]][[です]]。
-#: つきはちきゅうのゆいいつのえいせいです。
-#: tsuki wa chikyū no yui'itsu no eisei desu.
-#: '''Moon''' is the only one [[satellite]] of the [[Earth]].
+#: [[日本]][[では]][[月]][[に]][[うさぎ]][[が]][[住む|住ん]][[だ|で]][[いる]][[と]][[いう]][[お話]][[が]][[ある|あり]][[ます]]。
+#:: にほんでは'''つき'''にうさぎがすんでいるというおはなしがあります。
+#:: ''Nihon de wa '''tsuki''' ni usagi ga sunde iru toiu ohanashi ga arimasu.''
+#::: In Japan, there is a fairy-tale that rabbits live on the '''moon'''.
+#: '''月'''[[は]][[地球]][[の]][[唯一]][[の]][[衛星]][[です]]。
+#:: '''つ'''きはちきゅうのゆいいつのえいせいです。
+#:: '''''Tsuki''' wa chikyū no yui'itsu no eisei desu.''
+#::: '''Moon''' is the only one [[satellite]] of the [[Earth]].
 # a [[month]]
-#* [[月]][[に]][[一度]]、[[旅行]][[に]][[出かける|出かけ]][[ます]]。
-#: つきにいちど、りょこうにでかけます。
-#: tsuki ni ichido, ryokō ni dekake masu.
-#: I go for a trip once a '''month'''.
+#: '''月'''[[に]][[一度]]、[[旅行]][[に]][[出かける|出かけ]][[ます]]。
+#:: '''つき'''にいちど、りょこうにでかけます。
+#:: '''''Tsuki''' ni ichido, ryokō ni dekake masu.''
+#::: I go for a trip once a '''month'''.
 
 ====See also====
 {{top2}}
