--- a/en/s/SETI.26210.wikitext
+++ b/en/s/SETI.26210.wikitext
@@ -4,4 +4,4 @@
 ==={{acronym}}===
 '''SETI'''
 
-#Search for [[extraterrrestrial|Extraterrestrial]] Intelligence
+#Search for [[extraterrestrial|Extraterrestrial]] Intelligence
