iwiki +li <κύων#3804347>

--- a/en/κ/κύων.4255.wikitext
+++ b/en/κ/κύων.4255.wikitext
@@ -29,5 +29,6 @@ The alternate forms [[κύων]] (vocative singular) and [[κύνεσσι]] (dat
 [[ko:κύων]]
 [[it:κύων]]
 [[ku:κύων]]
+[[li:κύων]]
 [[pt:κύων]]
 [[tr:κύων]]
