--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-: From {{L.}} ''[[quadrilaterus]]'' (1650), [[quadri-]] (four) + [[latus]] (side)
+: From {{L.}} ''[[quadrilaterus]]'' (1650), [[quadri-]] (four) + [[latus]] (sided)
 
 ===Noun===
 {{wikipedia}}
