--- a/en/a/ADH.26250.wikitext
+++ b/en/a/ADH.26250.wikitext
@@ -2,7 +2,7 @@
 ==={{initialism}}===
 '''ADH'''
 
-#[[Antidiuretic]] [[Hormone]]
+#[[antidiuretic|Antidiuretic]] [[hormone|Hormone]]
 #[[alcohol]] [[dehydrogenase]]
 [[he:ADH]]
 [[pl:ADH]]
