--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -1,7 +1,7 @@
-[[Image:Sylvilagus floridanus 14136.JPG|thumb|A rabbit (sense 1).]]
+[[Image:[[Image:Example.jpg|thumb|A '''''']]]][[Image:Sylvilagus floridanus 14136.JPG|thumb|A rabbit (sense 1).]]
 ==English==
 {{wikipedia}}
-{{wikipedia|Leporidae}}
+{{wikipedia|Leporidae}}[[Image:[[Image:jee1[1]]]|thumb|A '''''']]
 
 ===Pronunciation===
 *[[w:AHD|AHD]]: (''UK, US'') răb'it, (''Australia'') răb'ət
