/* Translations */ Belarussian -> Belarusian, fi <dormouse#3858339>

--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -16,7 +16,7 @@ Unknown origin, though came to be associated with French [[dormire]] ‘sleep’
 {{top}}
 *Albanian: [[gjumashi i majmë]]
 *Basque: [[muxar]]
-*[[Belarussian]]: [[соня-палчок]]
+*[[Belarusian]]: [[соня-палчок]]
 *Breton: [[hunegan gris]]
 *Bulgarian: [[вид съсел]] ([[vid s"sel]])
 *Catalan: [[liró]]
@@ -27,7 +27,7 @@ Unknown origin, though came to be associated with French [[dormire]] ‘sleep’
 *Esperanto: [[gliro]]
 *Estonian: [[kunel]]
 *[[Faroese]]: [[heslimús]]
-*Finnish: [[tupaija]]
+*Finnish: [[unikeko]]
 *French: [[loir]] {{m}}
 *[[Frisian]]: [[sânslieper]]
 *[[Friulian]]: [[glîr]]
