trans link [[Basque]], trans link [[Breton]], trans link [[Catalan]], trans link [[Macedonian]], trans link [[Sardinian]], trans link [[Scottish Gaelic]], trans unlink Belarusian, trans unlink Faroese <dormouse#3858888>

--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -5,7 +5,7 @@
 Unknown origin, though came to be associated with French [[dormire]] ‘sleep’.
 
 ===Pronunciation===
-*{{IPA|/ˈdɔːmaʊs/}}
+* {{IPA|/ˈdɔːmaʊs/}}
 
 ===Noun===
 {{en-noun|dormice}}
@@ -14,58 +14,58 @@ Unknown origin, though came to be associated with French [[dormire]] ‘sleep’
 
 ====Translations====
 {{top}}
-*Albanian: [[gjumashi i majmë]]
-*Basque: [[muxar]]
-*[[Belarusian]]: [[соня-палчок]]
-*Breton: [[hunegan gris]]
-*Bulgarian: [[вид съсел]] ([[vid s"sel]])
-*Catalan: [[liró]]
-*Croatian: [[puh]]
-*Czech: [[plch]]
-*Danish: [[syvsover]], [[hasselmus]]
-*Dutch: [[relmuis]] {{f}}, [[hazelmuis]] {{f}}
-*Esperanto: [[gliro]]
-*Estonian: [[kunel]]
-*[[Faroese]]: [[heslimús]]
-*Finnish: [[unikeko]]
-*French: [[loir]] {{m}}
-*[[Frisian]]: [[sânslieper]]
-*[[Friulian]]: [[glîr]]
-*[[Gallegan]]: [[leirón cincento]]
-*German: [[Bilch]] {{m}}, [[Schläfer]] {{m}}, [[Schlafmaus]] {{f}}
-*Greek: [[δασομυωξός]] '' ''
-*Hungarian: [[pele]]
-*Icelandic: [[heslimús]]
-*Irish: [[luch hodlamáin]], [[dallóg fhéir]]
-*Italian: [[ghiro]] {{m}}, [[moscardino]] {{m}}
+* Albanian: [[gjumashi i majmë]]
+* [[Basque]]: [[muxar]]
+* Belarusian: [[соня-палчок]]
+* [[Breton]]: [[hunegan gris]]
+* Bulgarian: [[вид съсел]] ([[vid s"sel]])
+* [[Catalan]]: [[liró]]
+* Croatian: [[puh]]
+* Czech: [[plch]]
+* Danish: [[syvsover]], [[hasselmus]]
+* Dutch: [[relmuis]] {{f}}, [[hazelmuis]] {{f}}
+* Esperanto: [[gliro]]
+* Estonian: [[kunel]]
+* Faroese: [[heslimús]]
+* Finnish: [[unikeko]]
+* French: [[loir]] {{m}}
+* [[Frisian]]: [[sânslieper]]
+* [[Friulian]]: [[glîr]]
+* [[Gallegan]]: [[leirón cincento]]
+* German: [[Bilch]] {{m}}, [[Schläfer]] {{m}}, [[Schlafmaus]] {{f}}
+* Greek: [[δασομυωξός]] '' ''
+* Hungarian: [[pele]]
+* Icelandic: [[heslimús]]
+* Irish: [[luch hodlamáin]], [[dallóg fhéir]]
+* Italian: [[ghiro]] {{m}}, [[moscardino]] {{m}}
 {{mid}}
-*[[Ladin]]: [[ghiro]]
-*Latin: [[Myoxus]] [[glis]] (=[[Glis]] [[glis]]) {{m}}, [[Muscardinus]], [[Dryomys]]
-*Latvian: [[susuris]], [[susuris]]
-*Lithuanian: [[miegapelė]]
-*[[Lower Sorbian]]: [[połsk]]
-*Macedonian: [[полв]] ([[polv]])
-*Maltese: [[ġurdien ta’ denbu pjuma]]
-*Norwegian: [[syvsover]], [[sovemus]]
-*[[Occitan]]: [[missara]], [[greule]]
-*Polish: [[popielica]] '' ''
-*Portuguese: [[lirăo]]
-*Romanian: [[şoarece de pădure]]
-*[[Romansh]]: [[durmigliet]]
-*[[Romany]]: [[xurtso]] {{m}}, [[xurtsaika]] {{f}}
-*Russian: [[соня полчок]] ([[sonja polčok]]) {{m}}
-*[[Sami]]: [[hásselsáhpán]]
-*Sardinian: [[topi de venadroxu]], [[medrona de tzirva]]
-*Scottish Gaelic: [[dallag-an-fheòir]]
-*Serbian: [[пух]] ([[puh]])
-*Slovak: [[plch]]
-*Slovenian: [[polh]] {{m}}
-*Spanish: [[lirón]] '' ''
-*Swedish: [[sjusovare]], [[sovmöss]], [[hasselmus]]
-*Turkish: [[kakırca]]
-*Ukrainian: [[соня]] ([[sonja]])
-*[[Upper Sorbian]]: [[lěsna myška]], [[połch]], [[połšk]]
-*Welsh: [[pathew]]
+* [[Ladin]]: [[ghiro]]
+* Latin: [[Myoxus]] [[glis]] (=[[Glis]] [[glis]]) {{m}}, [[Muscardinus]], [[Dryomys]]
+* Latvian: [[susuris]], [[susuris]]
+* Lithuanian: [[miegapelė]]
+* [[Lower Sorbian]]: [[połsk]]
+* [[Macedonian]]: [[полв]] ([[polv]])
+* Maltese: [[ġurdien ta’ denbu pjuma]]
+* Norwegian: [[syvsover]], [[sovemus]]
+* [[Occitan]]: [[missara]], [[greule]]
+* Polish: [[popielica]] '' ''
+* Portuguese: [[lirăo]]
+* Romanian: [[şoarece de pădure]]
+* [[Romansh]]: [[durmigliet]]
+* [[Romany]]: [[xurtso]] {{m}}, [[xurtsaika]] {{f}}
+* Russian: [[соня полчок]] ([[sonja polčok]]) {{m}}
+* [[Sami]]: [[hásselsáhpán]]
+* [[Sardinian]]: [[topi de venadroxu]], [[medrona de tzirva]]
+* [[Scottish Gaelic]]: [[dallag-an-fheòir]]
+* Serbian: [[пух]] ([[puh]])
+* Slovak: [[plch]]
+* Slovenian: [[polh]] {{m}}
+* Spanish: [[lirón]] '' ''
+* Swedish: [[sjusovare]], [[sovmöss]], [[hasselmus]]
+* Turkish: [[kakırca]]
+* Ukrainian: [[соня]] ([[sonja]])
+* [[Upper Sorbian]]: [[lěsna myška]], [[połch]], [[połšk]]
+* Welsh: [[pathew]]
 {{bottom}}
 
 [[Category:English nouns with irregular plurals]]
