--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -37,6 +37,7 @@ From {{L.}} [[#Latin|mania]], from {{Gr.}} [[μανία]] (''mania'') "madness".
 
 # [[#English|mania]]
 # [[habit]] (if strange)
+# [[quirk]]
 
 ====Related terms====
 *[[maniacale]]
