cat wl <waddya#3868592>

--- a/en/w/waddya.741893.wikitext
+++ b/en/w/waddya.741893.wikitext
@@ -3,4 +3,6 @@
 ===Contraction===
 '''waddya'''
 
-#{{informal}} What do you . . . ?
+#{{informal}} [[what|What]] do you . . . ?
+
+[[Category:Eye dialect]]
